--- a/conge.livingwithfcs.org/你是光.html
+++ b/conge.livingwithfcs.org/你是光.html
@@ -3,7 +3,7 @@
 <p>layout: post
 title: "你是光"
 date: "2024-05-21 07:03:13"
-categories: 随笔
+categories: 隨筆
 auth: conge</p>
 <h2>tags: 觉醒</h2>
 <ul>
