--- a/conge.livingwithfcs.org/折返点 2429 - 隧道马的人和（一）.html
+++ b/conge.livingwithfcs.org/折返点 2429 - 隧道马的人和（一）.html
@@ -64,7 +64,7 @@ auth: conge</p>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="2024_week28.png" src="https://s2.loli.net/2024/10/16/LZzsSMJdvh8w6mB.png"/></td>
 </tr>
 </tbody>
 </table>
@@ -78,30 +78,31 @@ auth: conge</p>
 <tbody>
 <tr>
 <td style="text-align:left">20240708</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240708.webp" src="https://s2.loli.net/2024/10/16/hSyj2kCp9Gr6uY8.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240709</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240709.webp" src="https://s2.loli.net/2024/10/16/OlcLmUaZvwNPAoy.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240710</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240710.webp" src="https://s2.loli.net/2024/10/16/E74YFghk6V8wNca.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240711</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240711.webp" src="https://s2.loli.net/2024/10/16/CegvifYj6FdESa3.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240712</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240712.webp" src="https://s2.loli.net/2024/10/16/65LGSq4lM2PQAkb.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240713</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240713.webp" src="https://s2.loli.net/2024/10/16/oA1FZgDVqWrj7eP.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240714</td>
+<td style="text-align:center"><img alt="20240714.webp" src="https://s2.loli.net/2024/10/16/VOnNtx19eKY7qmD.webp"/></td>
 </tr>
 </tbody>
 </table>
@@ -113,4 +114,5 @@ auth: conge</p>
 </ul>
 <pre><code>2024-07-15 初稿
 2024-07-21 发布
+2024-10-15 补图
 </code></pre>
