--- a/conge.livingwithfcs.org/折返点 2437 跑步途中右脚脚踝痛什么原因？.html
+++ b/conge.livingwithfcs.org/折返点 2437 跑步途中右脚脚踝痛什么原因？.html
@@ -38,7 +38,7 @@ auth: conge</p>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="2024_week37.png" src="https://s2.loli.net/2024/10/17/BiuKjzWQJ2b3G6P.png"/></td>
 </tr>
 </tbody>
 </table>
@@ -52,7 +52,7 @@ auth: conge</p>
 <tbody>
 <tr>
 <td style="text-align:left">20240909</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240909.webp" src="https://s2.loli.net/2024/10/17/KtW4kqpZHiSVEbM.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240910</td>
@@ -60,11 +60,11 @@ auth: conge</p>
 </tr>
 <tr>
 <td style="text-align:left">20240911</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240911.webp" src="https://s2.loli.net/2024/10/17/FTK6hInx4PV8HgS.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240912</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240912.webp" src="https://s2.loli.net/2024/10/17/NBCi2RrE9JUuZFm.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240913</td>
@@ -72,10 +72,11 @@ auth: conge</p>
 </tr>
 <tr>
 <td style="text-align:left">20240914</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240914.webp" src="https://s2.loli.net/2024/10/17/r7xuFqQE8OHKNzp.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240915</td>
+<td style="text-align:center"><img alt="20240915.webp" src="https://s2.loli.net/2024/10/17/iZtJYNTo6SEUAuv.webp"/></td>
 </tr>
 </tbody>
 </table>
@@ -86,4 +87,5 @@ auth: conge</p>
 <li><a href="https://www.strava.com/athletes/57680242">我的 Strava 页面</a></li>
 </ul>
 <pre><code>2024-09-19 发布
+2024-10-17 补图
 </code></pre>
