--- a/f2h2h1.github.io/SEO的经验.html
+++ b/f2h2h1.github.io/SEO的经验.html
@@ -45,6 +45,7 @@
 <li>本站链接外站的数量和页面权重 (PageRank)<ul>
 <li>网页上的链接数量限制在合理范围内（最多几千个）</li>
 <li>网页里的链接要保持有效的</li>
+<li>移除网页中的死链</li>
 </ul>
 </li>
 <li>本站在搜索引擎结果里被点击的次数</li>
@@ -166,6 +167,11 @@
 <li>使用一个站点分析工具</li>
 <li>除了 sitemap 和 robots.txt 之外，还可以再加上 atom 和 rss 和 JSONFeed</li>
 <li>重视链接的分享</li>
+<li>js 和 css 等静态资源尽量合并和压缩</li>
+<li>静态资源和图片如果可以就加上 CDN</li>
+<li>加速页面的打开速度也是 SEO 优化的一部分</li>
+<li>tls 证书要及时更新</li>
+<li>如果条件允许就不要用太冷门的域名</li>
 <li>不要搞 SEO 的作弊</li>
 </ul>
 <h2>SEO 的辅助工具</h2>
@@ -305,6 +311,8 @@
 微格式
     https://developer.mozilla.org/en-US/docs/Web/HTML/microformats
     https://microformats.org/
+
+AMP 是什么？
 --&gt;
 
 <h2>参考</h2>
