--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -744,6 +744,15 @@ ld test.o -o test
 <li>xargs</li>
 </ul>
 </li>
+<li>inetutils 网络工具组<ul>
+<li>inetd</li>
+<li>telnet</li>
+<li>ftp</li>
+<li>ping</li>
+<li>traceroute</li>
+<li>ifconfig</li>
+</ul>
+</li>
 <li>bash</li>
 <li>gzip</li>
 <li>gnu grep</li>
@@ -778,7 +787,6 @@ gcc test.c -o test $(pkg-config opencv --cflags)
 &lt;!--
 bsdmainutils
 net-tools 和 iproute2
-inetutils
 dnsutils
 --&gt;
 
@@ -786,6 +794,7 @@ dnsutils
 <ul>
 <li><a href="https://zh.wikipedia.org/wiki/GNU%E8%BD%AF%E4%BB%B6%E5%8C%85%E5%88%97%E8%A1%A8">https://zh.wikipedia.org/wiki/GNU%E8%BD%AF%E4%BB%B6%E5%8C%85%E5%88%97%E8%A1%A8</a></li>
 <li><a href="https://zh.wikipedia.org/wiki/GNU%E6%A0%B8%E5%BF%83%E5%B7%A5%E5%85%B7%E7%BB%84">https://zh.wikipedia.org/wiki/GNU%E6%A0%B8%E5%BF%83%E5%B7%A5%E5%85%B7%E7%BB%84</a></li>
+<li><a href="https://www.gnu.org/software/software.html">https://www.gnu.org/software/software.html</a></li>
 </ul>
 <p>感觉 GNU 真的除了内核之外，什么都有了。</p>
 <h2>让网站支持 ipv6</h2>
@@ -919,9 +928,15 @@ Get-ExecutionPolicy -List
 </code></pre>
 <p><a href="https://docs.microsoft.com/zh-cn/powershell/module/microsoft.powershell.core/about/about_execution_policies?view=powershell-7.2">https://docs.microsoft.com/zh-cn/powershell/module/microsoft.powershell.core/about/about_execution_policies?view=powershell-7.2</a></p>
 <h2>python 的 http 服务和 cgi</h2>
+<blockquote><p>python 的 cgi 模块在 3.13 被移除了
+<a href="https://docs.python.org/zh-tw/3.12/library/cgi.html">https://docs.python.org/zh-tw/3.12/library/cgi.html</a>
+<a href="https://peps.python.org/pep-0594/#cgi">https://peps.python.org/pep-0594/#cgi</a></p>
+</blockquote>
 <p>python 一行命令启动 http 服务</p>
 <pre><code class="lang-sh"># 最简单的 http 服务
 python -m http.server
+# 指定端口号的 http 服务
+python -m http.server 8081
 # 有 cgi 的 http 服务
 python -m http.server --cgi
 # 有 cgi 的和指定端口号的 http 服务
@@ -1069,6 +1084,40 @@ nc 理论上也可以实现，但一行代码会写得非常长
 
 --&gt;
 
+<h2>embed 版的 python 如何安装 pip</h2>
+<ol>
+<li>cd 到 python 的根目录</li>
+<li>然后运行这句 curl <a href="https://bootstrap.pypa.io/get-pip.py">https://bootstrap.pypa.io/get-pip.py</a> | ./python</li>
+<li>然后修改这个文件 python312._pth ， 312 是版本号，在这个文件里加上<pre><code> ./Lib/site-packages
+</code></pre>
+</li>
+</ol>
+<p>参考这个文档 <a href="https://pip.pypa.io/en/stable/installation/">https://pip.pypa.io/en/stable/installation/</a></p>
+<p>python 的环境变量，除了安装目录之外，还有一个 Script 目录
+但其实一般影响都不大，根目录重要一点</p>
+<p>如果没法把 python 加入环境变量，那么每次调用最好都用绝对路径</p>
+<p>列出 pip 的所有模块</p>
+<pre><code>python -m pip list
+</code></pre>
+<p>列出 python 所有可用的模块</p>
+<pre><code>python -c 'import pydoc;pydoc.help("modules")'
+</code></pre>
+<p>这句也有类似的效果，但好像只有 sys 下的模块</p>
+<pre><code>python -c 'import sys;print(sys.modules.keys())'
+</code></pre>
+<h2>如何退出 python 的交互式解释器</h2>
+<ul>
+<li>用 exit 函数退出<ul>
+<li>先输入 import sys ，如果之前已引入了 sys 模块，就忽略这一句</li>
+<li>再输入 sys.exit()</li>
+</ul>
+</li>
+<li>快捷键退出： 在交互式解释器中，你可以使用快捷键退出：<ul>
+<li>在 Windows 和 Linux 上，按 Ctrl + Z 然后按 Enter。</li>
+<li>在 macOS 上，按 Ctrl + D。</li>
+</ul>
+</li>
+</ul>
 <h2>debian 一句命令安装 docker</h2>
 <p>因为要经常部署和重装系统，所以就整理了这样一句命令，可能会因为 docker 的更新而失效，要注意修命令里的版本号</p>
 <p>具体环境</p>
@@ -1171,7 +1220,76 @@ apt install -y python3-pip
 <li>然后运行这个命令 source ~/.bashrc</li>
 </ul>
 </li>
+<li>列出当前环境所有的别名<pre><code>  alias
+  alias -p
+</code></pre>
+</li>
+<li>删除别名<pre><code>  删除一个别名
+  unalias ll
+  删除两个别名
+  unalias ll ll2
+  删除全部别名
+  unalias -a
+</code></pre>
+</li>
 </ul>
+<h2>在 bash 里判断一个变量是不是环境变量</h2>
+<p>判断 PS1 是不是环境变量</p>
+<pre><code>printenv|awk -F '=' ' {print $1}'|grep "^PS1$"
+printenv|awk -F '=' ' {print $1}'|grep "^PS1$";if [ "$?" -eq 1 ]; then echo "1"; else echo "0"; fi;
+printenv|awk -F '=' ' {print $1}'|grep "^PS1$";if [ "$?" -eq 1 ]; then echo "This variable is not an environment variable"; else echo "This variable is an environment variable"; fi;
+printenv|awk -F '=' ' {print $1}'|grep "^PS1$" 1&gt;/dev/null ;if [ "$?" -eq 1 ]; then echo "This variable is not an environment variable"; else echo "This variable is an environment variable"; fi;
+</code></pre>
+&lt;!--
+## 在 bash 里判断一个文件的类型
+
+判断 ./index.html 是不是文本文件
+file -b -i ./index.html | grep "^text" 1&gt;/dev/null ;if [ "$?" -eq 1 ]; then echo "This file is not a text file"; else echo "This file is a text file"; fi;
+
+
+
+应该可以通过 file 命令来区分 文本文件 和 二进制文件
+file -b -i 文件路径
+-b 不输出文件名
+-i 输出文件对应的 MIME type 和 MIME encoding
+-L 根据软连接重定向
+--mime-type 只输出 MIME type
+只有输出的是 text 开头的是文本文件，其它都当作是二进制文件（并不是很严谨）
+
+一次列出当前目录下全部的 .html 文件
+file -i ./*.html
+
+
+file -b -L --mime-type /bin/mail
+--&gt;
+&lt;!--
+
+/bin
+/sbin
+/usr/bin
+/usr/sbin
+/usr/local/bin
+/usr/local/sbin
+
+alias 和 $PATH
+
+echo $PATH|awk 'BEGIN{RS=":"}{print $0}'
+printenv PATH|awk 'BEGIN{RS=":"}{print $0}'
+printenv PATH|awk 'BEGIN{RS=":"}{print $0}'
+
+realpath
+
+file -L -i /bin/mail
+
+file -L --mime-type /bin/mail
+
+file -b -L --mime-type /bin/mail
+
+
+alias -p
+
+--&gt;
+
 <h2>用于 git pull 和 git push 的脚本</h2>
 <p>因为 github 的 pull 和 push 总是超时，所以写了两段脚本用于失败后的自动重试</p>
 <pre><code class="lang-bash">#!/bin/bash
@@ -1476,7 +1594,7 @@ echo $phpcode | php -a -- a=1;
 
 php -r "$phpcode" -- a=1;
 
-php -a &lt;&lt;- 'EOF'
+php -a &lt;&lt;- 'EOF' -- a=1;
 echo '123';
 echo "asd";
 $a="qwe";
@@ -1638,13 +1756,13 @@ apt install -y make &amp;&amp; \
 apt install -y gcc
 </code></pre>
 <p>下载源码</p>
-<pre><code>curl -O "https://busybox.net/downloads/busybox-1.36.1.tar.bz2"
+<pre><code>curl -O "https://busybox.net/downloads/busybox-1.37.0.tar.bz2"
 </code></pre>
 <p>解压源码</p>
-<pre><code>tar -xjf ./busybox-1.36.1.tar.bz2
+<pre><code>tar -xjf ./busybox-1.37.0.tar.bz2
 </code></pre>
 <p>切换进源码目录并开始安装</p>
-<pre><code>cd busybox-1.36.1
+<pre><code>cd busybox-1.37.0
 make defconfig
 make install
 </code></pre>
@@ -1652,19 +1770,19 @@ make install
 <pre><code>find / -name busybox
 </code></pre>
 <p>找到后就复制或剪切到 /bin 目录</p>
-<pre><code>cp /root/busybox-1.36.1/busybox /bin/busybox
+<pre><code>cp /root/busybox-1.37.0/busybox /bin/busybox
 </code></pre>
 <p>一句命令完成下载和安装，但需要是 root 用户，其它用户需要修改对应的目录</p>
 <pre><code>apt install -y bzip2 &amp;&amp; \
 apt install -y make &amp;&amp; \
 apt install -y gcc &amp;&amp; \
 cd &amp;&amp; \
-curl -O "https://busybox.net/downloads/busybox-1.36.1.tar.bz2" &amp;&amp; \
-tar -xjf ./busybox-1.36.1.tar.bz2 &amp;&amp; \
-cd busybox-1.36.1 &amp;&amp; \
+curl -L -O "https://busybox.net/downloads/busybox-1.37.0.tar.bz2" &amp;&amp; \
+tar -xjf ./busybox-1.37.0.tar.bz2 &amp;&amp; \
+cd busybox-1.37.0 &amp;&amp; \
 make defconfig &amp;&amp; \
 make install &amp;&amp; \
-cp /root/busybox-1.36.1/busybox /bin/busybox &amp;&amp; \
+cp /root/busybox-1.37.0/busybox /bin/busybox &amp;&amp; \
 cd
 </code></pre>
 <h2>如何自建一个 DNS 服务</h2>
