--- a/f2h2h1.github.io/在Windows下安装pear.html
+++ b/f2h2h1.github.io/在Windows下安装pear.html
@@ -105,5 +105,16 @@ pear upgrade-all
 <td>2021</td>
 <td>pickle</td>
 </tr>
+<tr>
+<td>2024</td>
+<td>PIE</td>
+</tr>
 </tbody>
 </table>
+&lt;!--
+
+PIE
+PHP Installer for Extensions
+https://github.com/php/pie
+
+--&gt;
