--- a/f2h2h1.github.io/在Windows下配置PHP服务器.html
+++ b/f2h2h1.github.io/在Windows下配置PHP服务器.html
@@ -412,9 +412,11 @@ sh 下的绝对路径
 <p>并不是 error ，而是提示：如果这行下边出现错误则解决错误后再启动！</p>
 <ol>
 <li>https 配置<ol>
-<li>安装 ssl 模块 mod_ssl.so ，大多数情况下 mod_ssl.so 是默认安装好的</li>
+<li>安装 ssl 模块 mod_ssl.so 和 mod_socache_shmcb.so ，大多数情况下 mod_ssl.so 和 mod_socache_shmcb.so 是默认安装好的</li>
 <li>启用 mod_ssl.so ，就是在 httpd.conf 文件里把那句 mod_ssl.so 的注释删掉</li>
-<li>监听 443 端口 listen 443</li>
+<li>启用 mod_socache_shmcb.so ，就是在 httpd.conf 文件里把那句 mod_socache_shmcb.so 的注释删掉</li>
+<li>把 httpd.conf 里的 #Include conf/extra/httpd-ssl.conf 注释去掉。</li>
+<li>把 httpd-ssl.conf 里的 VirtualHost 配置删掉或注释掉</li>
 <li>在 VirtualHost 里至少加上这几个字段<pre><code> SSLEngine on
  SSLCertificateFile "${SRVROOT}/conf/ssl/domain.crt"
  SSLCertificateKeyFile "${SRVROOT}/conf/ssl/rsa_private_key.pem"
@@ -772,5 +774,7 @@ cmd /c shutdown.bat
 timeout 2
 cmd /c startup.bat
 ```
+
+加上 apache 和 nginx http 重定向到 https 的配置
 
 --&gt;
