--- a/f2h2h1.github.io/密码学入门简明指南.html
+++ b/f2h2h1.github.io/密码学入门简明指南.html
@@ -148,6 +148,9 @@
 <li><p>最终实体证书 = 普通用户向 CA 申请后使用的证书</p>
 </li>
 <li><p>自签证书 = 用户信息（csr） + 用户公钥 + 私钥加密前面两个数据所得到的数字签名（用户私钥）</p>
+<ul>
+<li>自签证书 的 Issuer 和 Subject 是相同的</li>
+</ul>
 </li>
 <li><p>证书链是从终端用户证书后跟着一系列的 CA 证书，而通常最后一个是自签名证书，并且有如下关系：</p>
 <ol>
@@ -359,7 +362,7 @@
 <li><p>口令 密码 密钥 令牌 的区别</p>
 <ul>
 <li>密码学语境下<ul>
-<li>口令 password<ul>
+<li>口令 password/passphrase<ul>
 <li>通常是一个不太长的字符串，可以让人记住</li>
 <li>如果没有特别声明，通常不是一次性的</li>
 </ul>
@@ -892,7 +895,10 @@ openssl dgst -sha256 文件路径 | awk '{print $2}'
 </code></pre>
 </li>
 <li><p>输出当前时间戳</p>
-<pre><code>date +%s
+<pre><code># 10位时间戳
+date +%s
+# 13位时间戳
+date +%s%3N
 </code></pre>
 </li>
 <li><p>输出纳秒 这是一个 9 位的数字 一些简单的伪随机数算法会使用纳秒作为种子</p>
@@ -901,6 +907,7 @@ openssl dgst -sha256 文件路径 | awk '{print $2}'
 </li>
 <li><p>生成 32 位随机字符串</p>
 <pre><code>openssl rand -base64 32
+openssl rand -base64 256 | sed ':a;N;$!ba;s/\r\n/\n/g' | sed ':a;N;$!ba;s/\n//g' | tr -dc [:alnum:] | cut -c1-32
 </code></pre>
 </li>
 <li><p>输出随机数字</p>
@@ -909,6 +916,8 @@ openssl rand -base64 32 | tr -dc '0-9'
 openssl rand -base64 64 | tr -dc '0-9'
 # 生成16位随机数 有可能不足16位
 openssl rand -base64 128 | tr -dc '0-9' | cut -c1-16
+# 生成16位随机数
+openssl rand -base64 128 | sed ':a;N;$!ba;s/\r\n/\n/g' | sed ':a;N;$!ba;s/\n//g' | tr -dc [:digit:] | cut -c1-16
 </code></pre>
 </li>
 <li><p>查看 对称加密命令和可以使用的算法</p>
@@ -1486,6 +1495,20 @@ gpg --recipient [接收者ID] --output demo.de.txt --decrypt demo.txt.asc
 <p><a href="https://docs.azure.cn/zh-cn/articles/azure-operations-guide/application-gateway/aog-application-gateway-howto-create-self-signed-cert-via-openssl">https://docs.azure.cn/zh-cn/articles/azure-operations-guide/application-gateway/aog-application-gateway-howto-create-self-signed-cert-via-openssl</a></p>
 <p><a href="https://www.crypto101.io/">https://www.crypto101.io/</a> 密码学入门课程</p>
 &lt;!--
+
+除了 openssl 之外还有很多加密库
+guntls
+libsodium
+Bouncy Castle
+LibreSSL
+
+
+Bouncy Castle 是用于在计算机程序中实现加密的 API 集合。
+它包括用于 Java 和 C# 编程语言的 API。
+这些 API 由澳大利亚注册的慈善组织 Legion of the Bouncy Castle Inc. 提供支持。
+Bouncy Castle 起源于澳大利亚，因此美国对从美国出口密码学的限制不适用于它。
+
+
 
 同态加密？
 密码学原语？
