--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -322,6 +322,7 @@ tags: [css]</p>
 <li>A collection of example view transitions for multi-page sites: <a href="https://mpa-view-transitions-sandbox.netlify.app">https://mpa-view-transitions-sandbox.netlify.app</a></li>
 <li>Adam Argyle at SeattleJS Conf: <a href="https://seattlejs-view-transitions.netlify.app">https://seattlejs-view-transitions.netlify.app</a></li>
 <li>Astro View Transitions Photo Gallery: <a href="https://deathbyjavascript.com">https://deathbyjavascript.com</a></li>
+<li>Google I/O 2024 update: <a href="https://developer.chrome.com/blog/view-transitions-update-io24">https://developer.chrome.com/blog/view-transitions-update-io24</a></li>
 </ul>
 <blockquote><p>When a view transition occurs between two different documents it is called a cross-document view transition. This is typically the case in multi-page applications (MPA). Chrome 126 enables Cross-Document View Transitions triggered by a same-origin navigation. From now on, you no longer need rearchitect your app to an SPA to use View Transitions.</p>
 </blockquote>
