--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -94,6 +94,7 @@ top: true</p>
 <p>Utilities to work with PDFs in Node.js, browser and workers: <a href="https://github.com/unjs/unpdf">https://github.com/unjs/unpdf</a></p>
 <p>The web-platform-tests Interop project: <a href="https://github.com/web-platform-tests/interop">https://github.com/web-platform-tests/interop</a></p>
 <p>Code transformer based on AST but providing a more intuitive API: <a href="https://github.com/thx/gogocode">https://github.com/thx/gogocode</a></p>
+<p>Guidance on choosing a license for your open source project: <a href="https://choosealicense.com">https://choosealicense.com</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: <a href="https://moderncss.dev">https://moderncss.dev</a></p>
@@ -174,6 +175,9 @@ top: true</p>
 <p>CSS Custom Highlight API: <a href="https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API">https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API</a></p>
 <p>Highlight your plaintext via Shiki: <a href="https://github.com/KazariEX/plain-shiki">https://github.com/KazariEX/plain-shiki</a></p>
 <p>A headless UI library that works for a wide range of JS frameworks: <a href="https://github.com/chakra-ui/ark">https://github.com/chakra-ui/ark</a></p>
+<p>A growing collection of over 50 input components: <a href="https://origin-ui-alpha.vercel.app">https://origin-ui-alpha.vercel.app</a></p>
+<p>Good web design inspiration: <a href="https://godly.website">https://godly.website</a></p>
+<p>Stack Overflow's Combination Rich Text / Markdown Editor: <a href="https://github.com/StackExchange/Stacks-Editor">https://github.com/StackExchange/Stacks-Editor</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -221,7 +225,7 @@ top: true</p>
 <p>Vue3 wrapper components for smooth-dnd: <a href="https://gilnd.github.io/vue3-smooth-dnd">https://gilnd.github.io/vue3-smooth-dnd</a></p>
 <p>Vue.js and Nuxt Tips, Tricks and good practice: <a href="https://vuejstips.com">https://vuejstips.com</a></p>
 <p>A type safe router for vuejs: <a href="https://github.com/kitbagjs/router">https://github.com/kitbagjs/router</a></p>
-<p>Enhance Vue ecosystem with libraries and tools: <a href="https://github.com/unovue">https://github.com/unovue</a></p>
+<p>Build beautiful website using Vue &amp; Nuxt: <a href="https://github.com/unovue/inspira-ui">https://github.com/unovue/inspira-ui</a>, <a href="https://github.com/selemondev/spark-ui">https://github.com/selemondev/spark-ui</a></p>
 <hr/>
 <h2>Browsers related</h2>
 <p>Google Chrome upcoming schedule: <a href="https://chromiumdash.appspot.com/schedule">https://chromiumdash.appspot.com/schedule</a></p>
@@ -265,6 +269,7 @@ top: true</p>
 <p>Pi, your personal AI from Inflection: <a href="https://pi.ai">https://pi.ai</a></p>
 <p>Power your apps with real-time speech-to-text APIs: <a href="https://deepgram.com">https://deepgram.com</a></p>
 <p>Run Hugging Face Transformers directly in the browser: <a href="https://github.com/xenova/transformers.js">https://github.com/xenova/transformers.js</a></p>
+<p>Announce the release of Transformers.js v3: <a href="https://huggingface.co/blog/transformersjs-v3">https://huggingface.co/blog/transformersjs-v3</a></p>
 <p>A collection of Transformers.js demos: <a href="https://github.com/huggingface/transformers.js-examples">https://github.com/huggingface/transformers.js-examples</a></p>
 <p>A collection of guides and examples for the Gemini API: <a href="https://github.com/google-gemini/cookbook">https://github.com/google-gemini/cookbook</a></p>
 <p>Hands on with the Vercel AI SDK: <a href="https://github.com/nicoalbanese/ai-sdk-fundamentals">https://github.com/nicoalbanese/ai-sdk-fundamentals</a></p>
@@ -272,16 +277,16 @@ top: true</p>
 <p>An AI chatbot in Win95 style: <a href="https://wingpt.vercel.app">https://wingpt.vercel.app</a></p>
 <p>A Webapp that uses RAG to interact with a PDF directly in the browser: <a href="https://pdf.nico.dev">https://pdf.nico.dev</a></p>
 <p>High-Performance In-Browser LLM Inference Engine: <a href="https://github.com/mlc-ai/web-llm">https://github.com/mlc-ai/web-llm</a></p>
-<p>Fast AI voice assistant: <a href="https://github.com/ai-ng/swift">https://github.com/ai-ng/swift</a></p>
 <p>Starter project for the Vercel AI SDK RAG guide: <a href="https://github.com/vercel/ai-sdk-rag-starter">https://github.com/vercel/ai-sdk-rag-starter</a></p>
 <p>Build AI apps locally that can do document Q&amp;A: <a href="https://github.com/ykhli/local-ai-stack">https://github.com/ykhli/local-ai-stack</a></p>
 <p>Semantic Image Search with Vercel AI SDK: <a href="https://github.com/vercel-labs/semantic-image-search">https://github.com/vercel-labs/semantic-image-search</a></p>
 <p>Anthropic's educational courses: <a href="https://github.com/anthropics/courses">https://github.com/anthropics/courses</a></p>
-<p>Open source Claude Artifacts – built with Llama 3.1: <a href="https://llamacoder.together.ai">https://llamacoder.together.ai</a></p>
+<p>Quickly get started with building applications using the Anthropic API: <a href="https://github.com/anthropics/anthropic-quickstarts">https://github.com/anthropics/anthropic-quickstarts</a></p>
 <p>Find the best cursor rules for your framework and language: <a href="https://cursor.directory">https://cursor.directory</a></p>
 <p>Internal Knowledge Base Preview: <a href="https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base">https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base</a></p>
 <p>React Components for AI Chat: <a href="https://github.com/Yonom/assistant-ui">https://github.com/Yonom/assistant-ui</a></p>
 <p>Introducing the Realtime API: <a href="https://openai.com/index/introducing-the-realtime-api">https://openai.com/index/introducing-the-realtime-api</a></p>
+<p>Audio input and output for the OpenAI Chat Completion API: <a href="https://simonwillison.net/2024/Oct/18/openai-audio">https://simonwillison.net/2024/Oct/18/openai-audio</a></p>
 <p>Improve performance and UX for client-side AI: <a href="https://web.dev/articles/client-side-ai-performance">https://web.dev/articles/client-side-ai-performance</a></p>
 <hr/>
 <h2>Machine Learning</h2>
