--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -178,7 +178,7 @@ curl -d '{"key1":"value1", "key2":"value2"}' -H "Content-Type: application/json"
 <li><strong>multipart/form-data</strong>: each value is sent as a block of data ("body part"), with a user agent defined delimiter ("boundary") separating each part. The keys are given in the <code>Content-Disposition</code> header of each part.</li>
 <li><strong>text/plain</strong></li>
 </ul>
-<blockquote><p>In a regular HTTP response, the <code>Content-Disposition</code> response header is a header indicating if the content is expected to be displayed <em>inline</em> in the browser, that is, as a Web page or as part of a Web page, or as an <em>attachment</em>, that is downloaded and saved locally.</p>
+<blockquote><p>In a regular HTTP response, the <code>Content-Disposition</code> response header is a header indicating if the content is expected to be displayed <em>inline</em> in the browser, that is, as a Web page or as part of a Web page, or as an <em>attachment</em>, that is downloaded and saved locally. e.g. <code>Content-Disposition: inline</code> and <code>Content-Disposition: attachment; filename="file.jpg"</code>.</p>
 </blockquote>
 <p>Use <code>multipart/form-data</code> when your form includes any <code>&lt;input type="file"&gt;</code> elements. <strong>Characters are NOT encoded</strong> (No encoding means you save a lot of CPU cycles and keeps the total body size small). This is important when the form has a file upload control. You want to send the file binary and this ensures that bitstream is not altered.</p>
 <ul>
