--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 5</p>
-<h2>updatedDate: "Sep 23 2024"</h2>
+<h2>updatedDate: "Oct 11 2024"</h2>
 <p>更全面的准备可以参考:</p>
 <ul>
 <li><a href="https://hzfe.github.io/awesome-interview">https://hzfe.github.io/awesome-interview</a></li>
@@ -100,8 +100,78 @@ return new Promise((resolve, reject) =&gt; {
   }
 };</p>
 <pre><code>
-3. Convert a list of objects into a tree.
+3. Implement `debounce` and `throttle`.
+```js
+function debounce(fn, time) {
+  let timer = null
 
+  return (...args) =&gt; {
+    if (timer) {
+      clearTimeout(timer)
+      timer = null
+    }
+    timer = setTimeout(() =&gt; {
+      fn(...args)
+    }, time)
+  }
+}
+
+function throttle(fn, delay) {
+  let currentTime = Date.now()
+
+  return (...args) =&gt; {
+    if (Date.now() - currentTime &gt; delay) {
+      fn(...args)
+      currentTime = Date.now()
+    }
+  }
+}
+</code></pre>
+<ol>
+<li>Implement calling click event listener only once without using <code>{once: true}</code>.
+```js
+function clickOnce(el, cb) {
+const cb2 = () =&gt; {
+ cb();
+ el.removeEventListener('click', cb2, false);
+}
+el.addEventListener('click', cb2, false);
+}</li>
+</ol>
+<p>clickOnce($0, () =&gt; console.log('click'));</p>
+<pre><code>
+5. Implement the `bind` function by yourself.
+
+```js
+Function.prototype.myBind = function(context, ...args1) {
+  const fn = this;
+
+  return function(...args2) {
+    return fn.apply(context, [...args1, ...args2]);
+  };
+};
+</code></pre>
+<ol>
+<li><p>Implement the deep clone method.
+```js
+function deepClone(obj) {
+if (obj === null || typeof obj !== 'object') {
+ return obj;
+}
+let copy = Array.isArray(obj) ? [] : {};</p>
+<p>for (let key in obj) {
+ if (obj.hasOwnProperty(key)) {
+   copy[key] = typeof obj[key] === 'object' ? deepClone(obj[key]) : obj[key];
+ }
+}
+return copy;
+}</p>
+</li>
+</ol>
+<p>// <code>for...in</code> iterates over all enumerable properties, including those inherited.
+// <code>Object.keys()</code> gets only own enumerable property names.</p>
+<pre><code>
+7. Convert a list of objects into a tree.
 ```js
 let list = [
   { id: 1, name: 'node1', pid: 0 },
@@ -134,72 +204,6 @@ function listToTree(list) {
 }
 </code></pre>
 <ol>
-<li><p>Implement <code>debounce</code> and <code>throttle</code>.
-```js
-function debounce(fn, time) {
-let timer = null</p>
-<p>return (...args) =&gt; {
- if (timer) {
-   clearTimeout(timer)
-   timer = null
- }
- timer = setTimeout(() =&gt; {
-   fn(...args)
- }, time)
-}
-}</p>
-</li>
-</ol>
-<p>function throttle(fn, delay) {
-  let currentTime = Date.now()</p>
-<p>return (...args) =&gt; {
-    if (Date.now() - currentTime &gt; delay) {
-      fn(...args)
-      currentTime = Date.now()
-    }
-  }
-}</p>
-<pre><code>
-5. Implement calling click event listener only once without using `{once: true}`.
-```js
-function clickOnce(el, cb) {
-  const cb2 = () =&gt; {
-    cb();
-    el.removeEventListener('click', cb2, false);
-  }
-  el.addEventListener('click', cb2, false);
-}
-
-clickOnce($0, () =&gt; console.log('click'));
-</code></pre>
-<ol>
-<li>Implement the <code>bind</code> function by yourself.</li>
-</ol>
-<pre><code class="lang-js">Function.prototype.myBind = function(context, ...args1) {
-  const fn = this;
-
-  return function(...args2) {
-    return fn.apply(context, [...args1, ...args2]);
-  };
-};
-</code></pre>
-<ol>
-<li><p>Implement the deep clone method.</p>
-<pre><code class="lang-js">function deepClone(obj) {
-if (obj === null || typeof obj !== 'object') {
- return obj;
-}
-let copy = Array.isArray(obj) ? [] : {};
-
-for (let key in obj) {
- if (obj.hasOwnProperty(key)) {
-   copy[key] = typeof obj[key] === 'object' ? deepClone(obj[key]) : obj[key];
- }
-}
-return copy;
-}
-</code></pre>
-</li>
 <li><p>Use <code>setTimeout</code> to invoke a function multiple times in the fixed interval.
 ```js
 function repeat(func, times, ms, immediate) {
@@ -225,100 +229,29 @@ let count = 0;</p>
 const repeatFunc = repeat(console.log, 4, 3000, true);
 repeatFunc("hello");</p>
 <pre><code>
-9. Implement the render function to convert the virtual dom JSON to real DOM.
-```js
-function render(vnode) {
-  const { tag, props, children } = vnode;
-  const el = document.createElement(tag);
-
-  if (props) {
-    for (const key in props) {
-      const value = props[key];
-      if (key.startsWith("on")) {
-        el.addEventListener(key.slice(2).toLowerCase(), value);
-      } else {
-        el.setAttribute(key, value);
-      }
-    }
-  }
-
-  if (children) {
-    if (typeof children === "string") {
-      el.textContent = children;
-    } else {
-      children.forEach((item) =&gt; {
-        el.appendChild(render(item));
-      });
-    }
-  }
-
-  return el;
-}
-
-/**
- * Parse a string of HTML or XML to a DOM tree.
- * @param {string} [html] String containing HTML or XML to be parsed.
- * @returns {DocumentFragment} Object containing Node structure of HTML/XML parsed.
- */
-const parse = (html) =&gt; {
-  const element = document.createElement('template');
-  if (html !== undefined) {
-    element.innerHTML = html;
-  }
-  return element.content;
-};
-
-parse('Some &lt;em&gt;awesome&lt;/em&gt; markup &lt;img src="explosion.gif"&gt;');
-// returns DocumentFragment(4) [ #text, em, #text, img ]
-</code></pre>
-<ol>
-<li><p>Implement the functionality of <code>lodash.get</code>.
+9. Implement the functionality of `lodash.get`.
 ```js
 // _.get(object, path, [defaultValue])
 function get(obj, path, defaultValue = undefined) {
-const keys = Array.isArray(path) ? path : path.split('.');
-let result = obj;</p>
-<p>for (const key of keys) {
-if (result == null || typeof result !== 'object') {
-  return defaultValue;
+  const keys = Array.isArray(path) ? path : path.split('.');
+  let result = obj;
+
+  for (const key of keys) {
+    if (result == null || typeof result !== 'object') {
+      return defaultValue;
+    }
+    result = result[key];
+  }
+
+  return result === undefined ? defaultValue : result;
 }
-result = result[key];
-}</p>
-<p>return result === undefined ? defaultValue : result;
-}</p>
-</li>
-</ol>
-<p>// test
+
+// test
 const obj = { a: { b: { c: 42 } } };
 console.log(get(obj, 'a.b.c')); // 42
 console.log(get(obj, ['a', 'b', 'c'])); // 42
 console.log(get(obj, 'a.b.d', 'default')); // 'default'
-console.log(get(obj, 'x.y.z', 'not found')); // 'not found'</p>
-<pre><code>
-11. How to add two big integers in js?
-```js
-function add(A, B) {
-  const AL = A.length
-  const BL = B.length
-  const ML = Math.max(AL, BL)
-
-  let carry = 0, sum = ''
-
-  for (let i = 1; i &lt;= ML; i++) {
-    let a = +A.charAt(AL - i)
-    let b = +B.charAt(BL - i)
-
-    let t = carry + a + b
-    carry = Math.floor(t / 10)
-    t %= 10
-
-    sum = (i === ML &amp;&amp; carry)
-      ? (carry * 10 + t) + sum
-      : t + sum
-  }
-
-  return sum
-}
+console.log(get(obj, 'x.y.z', 'not found')); // 'not found'
 </code></pre>
 <ol>
 <li>Implement a simple middleware composition system, which is a common pattern in server-side JavaScript environments. <code>app.use</code> is used to register middleware functions, and <code>app.compose</code> is meant to run them in sequence.</li>
@@ -365,13 +298,74 @@ app.compose();  // Logs: 1, 3, 5, 6, 4, 2
 app.compose = compose(app.middlewares);
 </code></pre>
 <ol>
-<li>You need to send to the browser is HTML — not a JSON tree. Write a function that turns your JSX to an HTML string. That's what React's built-in <code>renderToString</code> does.</li>
+<li><p>Implement the render function to convert the virtual dom JSON to real DOM.
+```js
+function render(vnode) {
+const { tag, props, children } = vnode;
+const el = document.createElement(tag);</p>
+<p>if (props) {
+for (const key in props) {
+  const value = props[key];
+  if (key.startsWith("on")) {</p>
+<pre><code>el.addEventListener(key.slice(2).toLowerCase(), value);
+</code></pre>
+<p>} else {</p>
+<pre><code>el.setAttribute(key, value);
+</code></pre>
+<p>}
+}
+}</p>
+<p>if (children) {
+if (typeof children === "string") {
+  el.textContent = children;
+} else {
+  children.forEach((item) =&gt; {</p>
+<pre><code>el.appendChild(render(item));
+</code></pre>
+<p>});
+}
+}</p>
+<p>return el;
+}</p>
+</li>
 </ol>
-<pre><code class="lang-js">// written by Dan Abramov
+<p>/**</p>
+<ul>
+<li>Parse a string of HTML or XML to a DOM tree.</li>
+<li>@param {string} [html] String containing HTML or XML to be parsed.</li>
+<li>@returns {DocumentFragment} Object containing Node structure of HTML/XML parsed.
+*/
+const parse = (html) =&gt; {
+const element = document.createElement('template');
+if (html !== undefined) {
+ element.innerHTML = html;
+}
+return element.content;
+};</li>
+</ul>
+<p>parse('Some &lt;em&gt;awesome&lt;/em&gt; markup &lt;img src="explosion.gif"&gt;');
+// returns DocumentFragment(4) [ #text, em, #text, img ]</p>
+<pre><code>
+12. You need to send to the browser is HTML — not a JSON tree. Write a function that turns your JSX to an HTML string. That's what React's built-in `renderToString` does.
+
+```js
+// written by Dan Abramov
+// e.g. &lt;div&gt;hello&lt;span&gt;world&lt;/div&gt;
 // {
 //   $$typeof: Symbol("react.element"),
 //   type: "div",
-//   props: { children: "Hello" },
+//   props: {
+//     children: [
+//       "hello",
+//       {
+//         $$typeof: Symbol("react.element"),
+//         type: "span",
+//         props: {
+//           children: "world"
+//         }
+//       }
+//     ]
+//   },
 // }
 async function renderJSXToHTML(jsx) {
   if (typeof jsx === "string" || typeof jsx === "number") {
@@ -449,37 +443,40 @@ function useEffect(cb, depArray) {
 function reactive(target) {
   const depsMap = new Map();
 
-  const handler = {
+  return new Proxy(target, {
     get(target, key, receiver) {
       if (!depsMap.has(key)) {
         depsMap.set(key, new Set());
       }
       const dep = depsMap.get(key);
-      track(dep);
+      if (activeEffect) {
+        dep.add(activeEffect);
+      }
       return Reflect.get(target, key, receiver);
     },
     set(target, key, value, receiver) {
       const result = Reflect.set(target, key, value, receiver);
-      if (depsMap.has(key)) {
-        const dep = depsMap.get(key);
-        trigger(dep);
+      const dep = depsMap.get(key);
+      if (dep) {
+        dep.forEach(effect =&gt; effect());
       }
       return result;
     }
-  };
-
-  return new Proxy(target, handler);
+  });
 }
 
-function track(dep) {
-  if (activeEffect) {
-    dep.add(activeEffect);
-  }
+function effect(fn) {
+  activeEffect = fn
+  activeEffect()
+  activeEffect = null
 }
 
-function trigger(dep) {
-  dep.forEach(effect =&gt; effect());
-}
+// Usage example
+const state = reactive({ count: 0 });
+effect(() =&gt; {
+  console.log('Count is:', state.count);
+});
+state.count++;
 </code></pre>
 <ol>
 <li>Check if an object has circular references.</li>
@@ -581,4 +578,24 @@ async function* sseStreamIterator(apiUrl, requestBody) {
     }
   }
 }
+</code></pre>
+<pre><code class="lang-js">// TextEncoder and TextDecoder are used to convert between strings and Uint8Arrays.
+// TextEncoder only supports UTF-8 encoding, 
+// while TextDecoder can support various encodings.
+const encoder = new TextEncoder();
+const decoder = new TextDecoder();
+
+const longMessage = "This is a longer message that we'll process in chunks";
+const encodedLong = encoder.encode(longMessage);
+
+// Simulate processing data in chunks (e.g., streaming)
+const chunkSize = 10;
+for (let i = 0; i &lt; encodedLong.length; i += chunkSize) {
+  const chunk = encodedLong.slice(i, i + chunkSize);
+  const decodedChunk = decoder.decode(chunk, { stream: true });
+  console.log(`Chunk ${i/chunkSize + 1}:`, decodedChunk);
+}
+
+// Final chunk (need to call decode without stream option to finish)
+decoder.decode(); // Flush the stream
 </code></pre>
