--- a/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
+++ b/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
@@ -6,22 +6,17 @@ slug: http-connection-caching-http2
 description: ""
 added: "Nov 20 2022"
 tags: [web]</p>
-<h2>updatedDate: "Aug 9 2024"</h2>
+<h2>updatedDate: "Oct 29 2024"</h2>
 <h2>Connection management</h2>
 <p>HTTP mostly relies on TCP for its transport protocol, providing a connection between the client and the server. Opening each TCP connection is a resource-consuming operation. Several messages must be exchanged between the client and the server. Opening and maintaining connections largely impacts the performance of web applications.</p>
 <p>The original model of HTTP, and the default one in HTTP/1.0, is <strong>short-lived connections</strong>. Each HTTP request is completed on its own connection; this means a TCP handshake happens before each HTTP request, and these are serialized.</p>
 <p>A <strong>persistent connection</strong>, also called keep-alive connection, remains open for a period of time, and can be reused for several requests, saving the need for a new TCP handshake. To put it simply, the HTTP server doesn't close the TCP connection after each response but waits some time if some other HTTP request will come over it too. The connection will not stay open forever: idle connections are closed after some time. <em>For example, Nginx <code>keepalive_timeout</code> is the time where the server will keep an idle connection open. If you send a request and then do nothing on this connection, the server will shutdown the connection at 75s after your previous request.</em> In HTTP/1.1, persistence is the default and the connection header is no longer needed, unless the client explicitly asks the server to close the connection by including a <code>Connection: close</code> header in its request, or the server decides to includes a <code>Connection: close</code> header in its response.</p>
 <p>Connection headers are prohibited in HTTP/2 and HTTP/3.</p>
 <h3>HTTP pipelining</h3>
-<p><strong>Head of Line blocking</strong> in HTTP terms is often referring to the fact that each client has a limited number of connections to a server and doing a new request over one of those connections has to wait for the ones to complete before it can fire it off.</p>
-<p>By default, HTTP requests are issued sequentially. HTTP/1.1 introduced the concept of pipelining so you could send more requests while you were waiting. It allows multiple HTTP requests to be sent over a single TCP connection without waiting for the corresponding responses.</p>
-<ul>
-<li>Non-idempotent requests such as POST should not be pipelined.</li>
-<li>HTTP pipelining was disabled or not implemented in modern browsers.</li>
-<li>This technique has been superseded by multiplexing, that is used by HTTP/2.</li>
-</ul>
-<blockquote><p>HTTP/2 does however still suffer from another kind of HOL, namely on the TCP level. One lost packet in the TCP stream makes all streams wait until that packet is re-transmitted and received. This HOL is being addressed with the QUIC protocol. HTTP/3 is being done over QUIC instead of TCP.</p>
-</blockquote>
+<p>By default, HTTP requests are issued sequentially. HTTP/1.1 introduced the concept of pipelining so you could send more requests while you were waiting. The server processes the requests and sends the responses in the order they were receive. It allows multiple HTTP requests to be sent over a single TCP, reducing the overhead associated with setting up and tearing down multiple TCP connections.</p>
+<p>The disadvantages of HTTP pipelining is <strong>Head of Line (HOL) blocking</strong>. If one request in the pipeline takes a long time to process, it can block the responses of all subsequent requests. This is one of the primary reasons pipelining is not widely adopted. This technique has been superseded by multiplexing, that is used by HTTP/2.</p>
+<p>HTTP/2 does however still suffer from another kind of HOL blocking at the TCP level. One lost packet in the TCP stream makes all streams wait until that packet is re-transmitted and received. This HOL is being addressed with the QUIC protocol.</p>
+<p>HTTP/3 builds on the strengths of HTTP/2 and runs over the QUIC protocol <em>(pronounced exactly like the English word "quick")</em>, which runs over UDP, further reducing latency and avoiding HOL blocking.</p>
 <h3>Domain sharding</h3>
 <p>In HTTP/1.x, the browser naively queue all HTTP requests on the client, sending one after another over a single, persistent connection. However, this is too slow. Hence, the browser vendors are left with no other choice than to <strong>open multiple TCP sessions in parallel</strong>. How many? In practice, most modern browsers, both desktop and mobile, open up to six connections per host. <em>(The higher the limit, the higher the client and server overhead, but at the additional benefit of higher request parallelism. Six connections per host is simply a safe middle ground.)</em></p>
 <p>Domain sharding is used to load resources from multiple domains/subdomains in an attempt to overcome a browser’s limit on the number of concurrent requests it can make, and therefore improving load performance. Browsers distinguish domains by name rather than by IP address. With modern browsers the limit connections for each domain is 6, we can boost the connections to 18 if we use 3 domains.</p>
@@ -195,7 +190,7 @@ console.log(await getUserById(1));
 </blockquote>
 <p>HTTP/1.x must rely on the use of parallel connections, which enables limited parallelism of up to six requests per origin. As a result, requests are queued on the client until a connection is available, which adds unnecessary network latency. It is eliminated in HTTP/2 because the browser can dispatch all requests the moment they are discovered, and the browser can communicate its stream prioritization preference via stream dependencies and weights, allowing the server to further optimize response delivery.</p>
 <h3>Header Compression</h3>
-<p>Each HTTP transfer carries a set of headers that describe the transferred resource and its properties. In HTTP/1.x, this metadata is always sent as plain text <em>(not compress request and response headers)</em> and adds 500–800 bytes of overhead per transfer, and sometimes kilobytes more if HTTP cookies are being used. To reduce this overhead and improve performance, HTTP/2 compresses request and response header metadata using the <strong>HPACK</strong> compression format that uses two techniques:</p>
+<p>Each HTTP transfer carries a set of headers that describe the transferred resource and its properties. In HTTP/1.x, this metadata is always sent as plain text <em>(Text-Based Headers, not efficiently compressed)</em> and adds 500–800 bytes of overhead per transfer, and sometimes kilobytes more if HTTP cookies are being used. To reduce this overhead and improve performance, HTTP/2 compresses request and response header metadata using the <strong>HPACK</strong> compression format that uses two techniques:</p>
 <ul>
 <li>It allows the transmitted header fields to be encoded via a static Huffman code, which reduces their individual transfer size.</li>
 <li>It requires that both the client and server maintain and update an indexed list of previously seen header fields, which is then used as a reference to efficiently encode previously transferred values.</li>
