--- a/kexizeroing.github.io/Inspirations.html
+++ b/kexizeroing.github.io/Inspirations.html
@@ -26,10 +26,11 @@ top: true</p>
 <li>@TkDodo blog about React Query <a href="https://tkdodo.eu/blog/practical-react-query">https://tkdodo.eu/blog/practical-react-query</a></li>
 <li>@lydiahallie technology through writing and visualizations</li>
 <li>@Una Chrome DevRel team</li>
-<li>@rauchg @steventey @leeerob at Vercel about DX</li>
+<li>@rauchg @leeerob at Vercel about DX</li>
 <li>@jlengstorf Learn With Jason <a href="https://www.learnwithjason.dev/episodes">https://www.learnwithjason.dev/episodes</a></li>
 <li>@asidorenko_ short videos about React/Next.js</li>
-<li>@simonw blog <a href="https://simonwillison.net">https://simonwillison.net</a></li>
+<li>@simonw writes notes on <a href="https://simonwillison.net">https://simonwillison.net</a></li>
+<li>@mattpocockuk about TypeScript</li>
 </ul>
 <h2>Learn from mistakes</h2>
 <ol>
