--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -1211,6 +1211,24 @@ async function parallel() {
 </code></pre>
 <blockquote><p>Concurrency is when two or more tasks can start, run, and complete in overlapping time periods. It doesn't necessarily mean they'll ever be running at the same instant. For example, multitasking on a single-core machine. Parallelism is when tasks literally run at the same time, e.g., on a multicore processor.</p>
 </blockquote>
+<pre><code class="lang-ts">// try...catch for await
+function catchError&lt;T&gt;(promise: Promise&lt;T&gt;): Promise&lt;[undefined, T] | [Error]&gt; {
+  return promise
+    .then(data =&gt; {
+      return [undefined, data] as [undefined, T]
+    })
+    .catch(err =&gt; {
+      return [err]
+    })
+}
+
+const [error, user] = await catchError(getUser(1))
+if (error) {
+  console.error('There was an error:', error.message)
+} else {
+  console.log(user)
+}
+</code></pre>
 <h3><code>for await...of</code></h3>
 <p>The <code>for await..of</code> loop is a handy tool when working with asynchronous operations. It allows us to iterate over the results of promises or asynchronous generators in a more readable and intuitive way.</p>
 <p>When a <code>for await...of</code> loop iterates over an iterable, it first gets the iterable's <code>[Symbol.asyncIterator]()</code> method and calls it, which returns an async iterator. If it does not exist, it then looks for an <code>[Symbol.iterator]()</code> method, which returns a sync iterator. The sync iterator returned is then wrapped into an async iterator by wrapping every object returned from the <code>next()</code> method into a resolved or rejected promise. The loop then repeatedly calls the final async iterator's <code>next()</code> method and awaits the returned promise, producing the sequence of values to be assigned to variable.</p>
