--- a/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
+++ b/kexizeroing.github.io/JavaScript prototype chain, Class and Proxy.html
@@ -199,7 +199,7 @@ const circle = new Circle(10);
 console.log(circle.area);
 </code></pre>
 <h3>Class inheritance</h3>
-<p>A class can extend another class or extend traditional function-based "classes". The <code>super</code> keyword is used to reference the parent class. Private fields are not inherited by subclasses. To fix this, you can add a getter method to the parent class that returns the value of the private field.</p>
+<p>A class can extend another class or extend traditional function-based "classes". The <code>super</code> keyword is used to reference the parent class. <strong>Private fields are not inherited by subclasses.</strong> To fix this, you can add a getter method to the parent class that returns the value of the private field.</p>
 <pre><code class="lang-js">class Square extends Polygon {
   constructor(length) {
     // calls parent class constructor
