--- a/kexizeroing.github.io/Learn the new frontend build tool Vite.html
+++ b/kexizeroing.github.io/Learn the new frontend build tool Vite.html
@@ -21,6 +21,7 @@ tags: [web]</p>
 <p>When you start the app in development, Webpack will bundle all of your code, and start the webpack-dev-server, the Express.js web server which will serve the bundled code. Within the bundled js file contains all modules for the app and need to regenerate the entire file when we change a file for HMR. It can often take an long wait to spin up a dev server, and even with HMR, file edits can take a couple seconds to be reflected in the browser.</p>
 <p>Vite doesn't set out to be a new bundler. Rather, it's a pre-configured build environment using the Rollup bundler and a tool for local development. Vite <a href="https://vitejs.dev/guide/dep-pre-bundling.html">pre-bundles dependencies</a> in development mode using esbuild.</p>
 <blockquote><p><code>esbuild</code>, which is written in Go, 10-100x faster than JavaScript-based bundlers, does the transpile things transforming into plain javascript. It will process and prebundle the dependencies into something works in the browser as native es-module. <code>vite --force</code> will ignore the dependency cache and reforce to process all the dependencies.</p>
+<p><code>esbuild</code> is highly optimized and compiled to native code. Using a JS runtime introduces a bottleneck that makes reaching those speeds impossible. However, <a href="https://github.com/privatenumber/esbuild-loader">esbuild-loader</a> can still speed up your build by removing the bottlenecks created by babel-loader, ts-loader, Terser, etc.</p>
 </blockquote>
 <p>Vite only support ES Modules, and parsing the native ES Modules means it will read the <code>export</code> and <code>import</code> lines from your code. It will convert those lines into HTTP requests back to the server, where it will again read the <code>export</code> and <code>import</code> lines and make new requests. Vite also leverages HTTP headers to speed up full page reloads: source code module requests are made conditional via <code>304 Not Modified</code>, and dependency module requests are strongly cached via <code>Cache-Control</code> header.</p>
 <p>&lt;img alt="webpack" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hc08w7udwkj31a20jmabm.jpg" width="600"&gt;</p>
@@ -111,6 +112,14 @@ const rawInput = import.meta.glob([
   as: 'raw',
   eager: true,
 })
+
+// 1. Add this into Vite setup
+const mdxFiles = import.meta.glob("./content/**.mdx");
+// 2. and it compiles to
+{
+  "./content/foo.mdx": () =&gt; import("./content/foo.mdx"),
+  "./content/bar.mdx": () =&gt; import("./content/bar.mdx"),
+}
 </code></pre>
 <h2>From Vue CLI to Vite</h2>
 <ol>
