--- a/kexizeroing.github.io/Module bundler and code transformation.html
+++ b/kexizeroing.github.io/Module bundler and code transformation.html
@@ -6,7 +6,8 @@ slug: module-bundler-and-code-transformation
 description: ""
 added: "Oct 9 2021"
 tags: [code, js]</p>
-<h2>updatedDate: "Oct 9 2024"</h2>
+<h2>updatedDate: "Oct 28 2024"</h2>
+<h2>Write your own module bundler</h2>
 <p>The bundler will start from the entry file, and it will try to understand which files it depends on. Then, it will try to understand which files its dependencies depend on. It will keep doing that until it figures out about every module in the application, and how they depend on one another. This understanding of a project is called the <strong>dependency graph</strong>.</p>
 <pre><code class="lang-js">const Compiler = require("./compiler");
 const options = require("../webpack.config");
@@ -43,6 +44,7 @@ module.exports = class Compiler {
     if (isEntry) {
       ast = getAST(filename);
     } else {
+      // Converted to absolute: '/your/project/src/xx.js'
       let absolutePath = path.join(process.cwd(), "./src", filename);
       ast = getAST(absolutePath);
     }
@@ -79,18 +81,41 @@ module.exports = class Compiler {
 
     fs.writeFileSync(outputPath, bundle, "utf-8");
   }
+
+  // example of modules
+  // {
+  //   'src/math.js': function(require, module, exports) {
+  //     exports.add = function(a, b) {
+  //       return a + b;
+  //     };
+  //   },
+  //   'src/logger.js': function(require, module, exports) {
+  //     exports.log = function(message) {
+  //       console.log(`[Logger]: ${message}`);
+  //     };
+  //   },
+  //   'src/index.js': function(require, module, exports) {
+  //     const math = require('./math.js');
+  //     const logger = require('./logger.js');
+
+  //     logger.log(math.add(2, 3));
+  //   },
+  // }
 };
 </code></pre>
 <pre><code class="lang-js">// parser.js
 const fs = require("fs");
 const parser = require("@babel/parser");
 const traverse = require("@babel/traverse").default;
-const { transformFromAst } = require("@babel/core");
+const { transformFromAstSync } = require("@babel/core");
 
 module.exports = {
+  // AST explorer: https://astexplorer.net
   getAST: (path) =&gt; {
     const content = fs.readFileSync(path, "utf-8");
-    // AST explorer: https://astexplorer.net
+    // 1. Babel parser generates AST
+    // 2. `sourceType` indicates the mode the code should be parsed in
+    // Files with ES6 imports and exports are considered "module" and are otherwise "script".
     return parser.parse(content, {
       sourceType: "module",
     });
@@ -98,6 +123,7 @@ module.exports = {
   getDependencies: (ast) =&gt; {
     const dependencies = [];
     traverse(ast, {
+      // target particular node types in the Syntax Tree
       ImportDeclaration: ({ node }) =&gt; {
         dependencies.push(node.source.value);
       },
@@ -105,7 +131,7 @@ module.exports = {
     return dependencies;
   },
   transform: (ast) =&gt; {
-    const { code } = transformFromAst(ast, null, {
+    const { code } = transformFromAstSync(ast, null, {
       presets: ["@babel/preset-env"],
     });
 
@@ -122,9 +148,64 @@ module.exports = {
 </ul>
 <p>We can think about the <em>abstract syntax tree</em> as the “final project” of the front-end of the compiler. It’s the most important part, because its the last thing that the front-end has to show for itself. The technical term for this is called the <em>intermediate code representation</em> or the <em>IR</em>. An AST is the most common form of IR.</p>
 </blockquote>
-<p>Below is an example of a Webpack plugin: a BannerPlugin. This plugin adds a banner or comment to the top of each generated file. It's simple but demonstrates how Webpack plugins interact with the compilation process.</p>
+<h2>Write a Webpack loader</h2>
+<p>A loader is a function that accepts a source code and returns a transformed source code.</p>
+<pre><code class="lang-js">// A custom webpack loader that turns MP3 files into interactive audio players
+const path = require('path')
+
+module.exports = function (source) {
+  // webpack exposes an absolute path to the imported module
+  // "/User/admin/audio.mp3" (this.resourcePath) -&gt; "audio.mp3"
+  const filename = path.basename(this.resourcePath)
+
+  const assetInfo = { sourceFilename: filename }
+  // emit a file to the build directory
+  this.emitFile(filename, source, null, assetInfo)
+
+  return `
+    import React from 'react'
+    export default function Player(props) {
+      return &lt;audio controls src="${filename}" /&gt;
+    }
+  `
+}
+</code></pre>
+<pre><code class="lang-js">module.exports = {
+  module: {
+    rules: [
+      {
+        test: /\.mp3$/,
+        use: ['babel-loader', 'mp3-loader'],
+      },
+    ],
+  },
+  resolveLoader: {
+    alias: {
+      'mp3-loader': path.resolve(__dirname, 'src/mp3-loader.js'),
+    },
+  },
+}
+</code></pre>
+<h2>Write a Webpack plugin</h2>
+<p>Among the two most important resources while developing plugins are the <code>compiler</code> and <code>compilation</code> objects.</p>
+<p>The <code>compiler</code> object represents the fully configured Webpack environment. When applying a plugin to the Webpack environment, the plugin will receive a reference to this compiler. Use the compiler to access the main Webpack environment.</p>
+<p>The <code>compilation</code> object represents a single build of versioned assets. A new compilation will be created each time a file change is detected, thus generating a new set of compiled assets. A compilation surfaces information about the present state of module resources, compiled assets, changed files, and watched dependencies.</p>
 <p>The <code>apply</code> method is Webpack's way of registering a plugin and giving it access to the <code>compiler</code> object. Webpack calls <code>apply</code> during the initialization phase, before the build process begins, allowing the plugin to set up event hooks and modify the build as necessary.</p>
+<pre><code class="lang-js">function HelloWorldPlugin(options) {
+  // Setup the plugin instance with options...
+}
+
+HelloWorldPlugin.prototype.apply = function(compiler) {
+  compiler.plugin('done', function() {
+    console.log('Hello World!'); 
+  });
+};
+
+module.exports = HelloWorldPlugin;
+</code></pre>
+<p>Here's an example of a plugin that adds a banner to the top of each generated file. It's simple but demonstrates how Webpack plugins interact with the compilation process.</p>
 <ul>
+<li><code>compiler.hooks.emit</code>: This is one of the last hooks that runs in the compilation lifecycle. It fires right before Webpack writes output files to disk.</li>
 <li><code>compilation.assets</code>: It's an object that represents all the files Webpack will emit.</li>
 <li><code>compilation.assets['bundle.js'].source()</code>: Retrieves the actual content of the asset as a string or a buffer.</li>
 <li><code>compilation.assets['bundle.js'].size()</code>: Returns the size of the asset's content in bytes, helping Webpack manage and report asset sizes accurately.</li>
@@ -154,6 +235,17 @@ module.exports = {
           };
         }
       }
+    });
+
+    // Example of other common hooks:
+    // Runs at the beginning of the compilation
+    compiler.hooks.compile.tap('SimpleBannerPlugin', () =&gt; {
+      console.log('Compilation starting...');
+    });
+
+    // Runs after compilation is done
+    compiler.hooks.done.tap('SimpleBannerPlugin', () =&gt; {
+      console.log('Compilation finished!');
     });
   }
 }
