--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -120,29 +120,29 @@ window.performance.getEntriesByType('resource')
 <li>When you type a URL into the Chrome omnibox, Chrome may automatically prerender the page for you, if it has high confidence you will visit that page. (View Chrome's predictions for URLs in the <code>chrome://predictors</code> page)</li>
 <li>Sites can use the <em>Speculation Rules API</em>, to programmatically tell Chrome which pages to prerender. This replaces what <code>&lt;link rel="prerender"...&gt;</code> used to do and allows sites to proactively prerender a page based on speculation rules on the page.</li>
 </ol>
-<p>Developers can insert JSON instructions onto their pages to inform the browser about which URLs to prerender. Speculation rules can be added in either the <code>&lt;head&gt;</code> or the <code>&lt;body&gt;</code> of the main frame.</p>
-<pre><code class="lang-html">&lt;!-- Currently, the only type of rule specified is a list rule, denoted by "source": "list"--&gt;
-&lt;script type="speculationrules"&gt;
-{
-  "prerender": [
-    {
-      "source": "list",
-      "urls": ["next.html", "next2.html"]
-    }
-  ]
-}
-&lt;/script&gt;
-</code></pre>
+<p>Developers can insert JSON instructions onto their pages to inform the browser about which URLs to prerender. Speculation rules can be added in either the <code>&lt;head&gt;</code> or the <code>&lt;body&gt;</code> of the main frame. The <code>moderate</code> option is a middle ground, and many sites could benefit from the following speculation rule that would prerender a link when holding the pointer over the link for 200 milliseconds or on the pointerdown event.</p>
 <p>Speculation rules can also be used to just prefetch pages, without a full prerender. Unlike the older <code>&lt;link rel="prefetch"&gt;</code> resource hint which just prefetched to the HTTP disk cache, documents loaded via speculation rules are processed in the same way that navigations are (but then not rendered) and are held in memory so will be available quicker to the browser once needed. <em>Prefetch speculation rules only prefetch the document, not its subresources.</em></p>
 <pre><code class="lang-html">&lt;script type="speculationrules"&gt;
-{
-  "prefetch": [
-    {
-      "source": "list",
-      "urls": ["next.html", "next2.html"]
-    }
-  ]
-}
+  {
+    "prefetch": [
+      {
+        "source": "document",
+        "where": {
+          "selector_matches": "a[href^='/']"
+        },
+        "eagerness": "immediate"
+      }
+    ],
+    "prerender": [
+      {
+        "source": "document",
+        "where": {
+          "selector_matches": "a[href^='/']"
+        },
+        "eagerness": "moderate"
+      }
+    ]
+  }
 &lt;/script&gt;
 </code></pre>
 <blockquote><ol>
