--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -6,7 +6,7 @@ slug: start-js-stack-project
 description: ""
 added: "Jun 16 2022"
 tags: [web]</p>
-<h2>updatedDate: "Sep 10 2024"</h2>
+<h2>updatedDate: "Oct 24 2024"</h2>
 <h2>Start a modern web project</h2>
 <pre><code class="lang-sh"># `npm create` is an alias for `npm init`
 npm create vite@latest
@@ -17,7 +17,9 @@ npm create vite@latest my-vue-app -- --template vue
 
 npx shadcn-ui@latest init
 </code></pre>
-<pre><code class="lang-sh">npx nuxi@latest init my-app
+<pre><code class="lang-sh"># nuxt@latest also works. `nuxi` is the cli package, it's minimal and fast to download
+# When you install nuxt, it re-exports nuxi as both `nuxi` and `nuxt`
+npx nuxi@latest init my-app
 </code></pre>
 <p>Start with templates:</p>
 <ul>
@@ -72,6 +74,25 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 <blockquote><p>An <code>invariant</code> function from <a href="https://github.com/alexreardon/tiny-invariant">tiny-invariant</a> takes a value, and if the value is falsy then the invariant function will throw. If the value is truthy, then the function will not throw.</p>
 </blockquote>
 <h3>Writing CSS in 2024</h3>
+<p><strong>CSS-in-JS libraries</strong> (e.g. styled-components, Emotion for React) allows you to style your components by writing CSS directly in your JavaScript code. The good part includes making styles locally-scoped by default, colocating styles with components, enabling you to reference JavaScript variables in your style rules. But CSS-in-JS adds runtime overhead, the library must "serialize" your styles into plain CSS string that can be inserted into the document. Every time the component renders, the object styles are serialized again. Btw, using CSS-in-JS with newer React features like Server Components and Streaming requires library authors to support the latest version of React.</p>
+<p>For example, <a href="https://github.com/emotion-js/emotion">Emotion</a> is a flexible CSS-in-JS library. It allows you to style apps quickly with string or object styles. It also computes a hash of the plain CSS during serialization — this hash is what you see in the generated class names.</p>
+<pre><code class="lang-jsx">&lt;div
+  css={{
+    padding: 32px;
+    background-color: hotpink;
+    font-size: 24px;
+    border-radius: 4px;
+    &amp;:hover {
+      color: ${color};
+    }
+  }}
+&gt;
+  Hover to change color
+&lt;/div&gt;
+
+// genergate below code
+&lt;div class="css-1h3ivcl"&gt;Hover to change color&lt;/div&gt;
+</code></pre>
 <p><strong>CSS Modules</strong> are a small but impactful enhancement on top of vanilla CSS. A CSS Module is a CSS file where all class names and animation names are scoped locally by default. They treat the classes defined in each file as unique. Each class name or identifier is renamed to include a unique hash, and a mapping is exported to JavaScript to allow referencing them. CSS Modules are available in almost every <a href="https://github.com/css-modules/css-modules/blob/master/docs/get-started.md">modern bundler and framework</a>.</p>
 <p><strong>Tailwind</strong> uses a compiler to generate only the classes used. So while the utility CSS framework contains many possible class names, only the classes used will be included in the single, compiled CSS file. Tailwind classes are just utilities for normal CSS that adhere to a design system. You can mix and match Tailwind with CSS Modules.</p>
 <blockquote><ol>
@@ -79,7 +100,6 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 <li>The way Tailwind scans your source code for classes is intentionally very simple — we don’t actually parse or execute any of your code in the language it’s written in, we just use regular expressions to extract every string that could possibly be a class name. (Don’t construct class names dynamically)</li>
 </ol>
 </blockquote>
-<p><strong>CSS-in-JS libraries</strong> which require runtime JavaScript are not currently supported in Server Components. Using CSS-in-JS with newer React features like Server Components and Streaming requires library authors to support the latest version of React.</p>
 <p><a href="https://lightningcss.dev">Lightning CSS</a> is an extremely fast CSS parser, transformer, and minifier written in Rust. It lets you use modern CSS features and future syntax today. Features such as CSS nesting, custom media queries, high gamut color spaces, logical properties, and new selector features are automatically converted to more compatible syntax based on your browser targets. Lightning CSS is used by Vite, and soon by Tailwind and Next.js. Tools like <code>postcss</code> and <code>autoprefixer</code> are being replaced by faster, all-in-one Rust toolchains.</p>
 <p>Lightning CSS can be used as a library from JavaScript or Rust, or from a standalone CLI. It can also be wrapped as a plugin in other build tools, and it is built into Parcel out of the box. For example, as a standalone CLI, it can be used to compile, minify, and bundle CSS files: <code>lightningcss --minify --bundle --targets 'defaults' input.css -o output.css</code>.</p>
 <h3><code>module</code> and <code>require</code> in Node.js</h3>
@@ -151,6 +171,19 @@ module.exports = {
 <p>With syntax transforms, I recommend <code>babel-preset-env</code>. For polyfills, the most popular one is <code>core-js</code>.</p>
 <p><code>core-js</code> provides support for the latest ECMAScript standard and proposals, from ancient ES5 features to bleeding edge features. It is one of the main reasons why developers can use modern ECMAScript features in their development process each day for many years, but most developers just don't know that they have this possibility because of <code>core-js</code> since they use <code>core-js</code> indirectly as it's provided by their transpilers or frameworks.</p>
 <p><code>core-js</code> is used by most of the popular websites. We can check it using <code>window['__core-js_shared__'].versions</code>, see details at <a href="https://github.com/zloirock/core-js/blob/master/docs/2023-02-14-so-whats-next.md">https://github.com/zloirock/core-js/blob/master/docs/2023-02-14-so-whats-next.md</a></p>
+<h3>The current state of ES5 on the web today</h3>
+<p><a href="https://philipwalton.com/articles/the-state-of-es5-on-the-web/">https://philipwalton.com/articles/the-state-of-es5-on-the-web/</a></p>
+<p><strong>It turns out that most sites on the internet ship code that is transpiled to ES5, yet still doesn’t work in IE 11</strong>, which meaning the transpiler and polyfill bloat is being downloaded by 100% of their users, but benefiting none of them.</p>
+<ul>
+<li>89% of sites serve at least 1 JavaScript file containing untranspiled ES6+ syntax.</li>
+<li>79% of sites serve at least 1 JavaScript file containing ES5 helper code.</li>
+<li>68% of sites serve at least 1 JavaScript file containing both ES5 helper code as well as untranspiled ES6+ syntax in the same file.</li>
+</ul>
+<p>For a site to serve users code that contains both ES5 helpers and untranspiled ES6+ syntax, there’s really only two plausible explanations:</p>
+<ol>
+<li>The site doesn’t need to support ES5 browsers, but some of their dependencies transpile to ES5, so therefore ES5 code appears in their output.</li>
+<li>The site intended to support ES5 browsers, but they didn’t realize that some of their dependencies publish untranspiled ES6+ syntax, and they didn’t configure their bundler to transpile code in <code>node_modules</code>.</li>
+</ol>
 <h3>Live Reload and Hot Reload</h3>
 <blockquote><p>When a file is edited, the dev server recompiles with the changes, then pushes a notification to the client code in the browser. The app code can then subscribe to "some file changed" notifications, re-import the new version of the code, and swap out the old code for the new code as the app is still running.</p>
 </blockquote>
