--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -6,7 +6,7 @@ slug: using-es-modules
 description: ""
 added: "Aug 12 2020"
 tags: [js]</p>
-<h2>updatedDate: "Aug 4 2024"</h2>
+<h2>updatedDate: "Oct 25 2024"</h2>
 <h2>ES Modules</h2>
 <p>While Node.js has been using the CommonJS standard for years and there are a number of JavaScript libraries and frameworks that enable module usage, the browser never had a module system. A module system must be first standardized by ECMAScript and then implemented by the browser. The good news is that modern browsers have started to support module functionality natively, and the use of native JavaScript modules is dependent on the <em>import</em> and <em>export</em> statements. <strong>The import and export statements cannot be used in embedded scripts unless such script has a <code>type="module"</code></strong>.</p>
 <blockquote><p>History of module formats:</p>
@@ -194,3 +194,4 @@ const mathUtils = require('./math-utils.mjs');
 ​
 console.log(mathUtils.square(2));
 </code></pre>
+<p>Node 23 was released on Oct 2024 that you can now <code>require()</code> files that use ESM (import/export). Previously, if you wanted to use a “module” from your CommonJS file, you would need to do use dynamic import <code>await import('some/module/file.mjs')</code> and you can’t just put this at the top of your file.</p>
