--- a/shiina18.github.io/Python 的 web 相关库杂录.html
+++ b/shiina18.github.io/Python 的 web 相关库杂录.html
@@ -62,6 +62,7 @@ comments: true</p>
 <h2>FastAPI</h2>
 <ul>
 <li><a href="https://zhuanlan.zhihu.com/p/672806587">Flask 已死, FastAPI 是未来</a></li>
+<li>2022 <a href="https://testdriven.io/blog/moving-from-flask-to-fastapi/">Moving from Flask to FastAPI</a></li>
 </ul>
 <h2>Celery</h2>
 <blockquote><p><a href="https://www.fullstackpython.com/celery.html">Celery</a> is a task queue implementation for Python web applications used to asynchronously execute work outside the HTTP request-response cycle.</p>
