--- a/shiina18.github.io/中位数两则, 线性时间与 leetcode 4.html
+++ b/shiina18.github.io/中位数两则, 线性时间与 leetcode 4.html
@@ -48,6 +48,7 @@ def quickselect(nums, k):
 \end{align</em>}
 $$</p>
 <p>之后易证 (由 substitution method) $\mathbb ET(n) = O(n)$. 不过 worst-case 是 $O(n^2)$.</p>
+<p>另外可以参考 <a href="https://stackoverflow.com/questions/4956593/optimal-algorithm-for-returning-top-k-values-from-an-array-of-length-n">Optimal algorithm for returning top k values from an array of length N</a>. 简单地说是建小根堆, pop k 次, worst case $n + (k-1)\log n$ 次比较, 在这个基础上再稍微加点优化.mod</p>
 <h2>In Worst-Case Linear Time</h2>
 <p>不妨约定, 当偶数个元素时, 中位数取中间两个数中较小的那个.</p>
 <p>算法记为 <code>select</code> 算法, 总体和前一个算法一样, 关键是找到一个好的 pivot. 记时间复杂度为 $T(n)$.</p>
