--- a/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(上海) 热身赛.html
+++ b/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(上海) 热身赛.html
@@ -94,7 +94,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:A misc/icpc-ashr2020-p/A/0.cpp %}
+{% icodeweb blog lang:cpp icpc-ashr2020-p/A.cpp %}
 
 &lt;/details&gt;<h2>B - Strawberry</h2>
 <h3>题意简述</h3>
@@ -147,7 +147,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:B misc/icpc-ashr2020-p/B/0.cpp %}
+{% icodeweb blog lang:cpp icpc-ashr2020-p/B.cpp %}
 
 &lt;/details&gt;<h2>C - Circle</h2>
 <h3>题意简述</h3>
@@ -158,6 +158,6 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:C misc/icpc-ashr2020-p/C/0.cpp %}
+{% icodeweb blog lang:cpp icpc-ashr2020-p/C.cpp %}
 
 &lt;/details&gt;
