--- a/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(南京) 热身赛.html
+++ b/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(南京) 热身赛.html
@@ -58,7 +58,7 @@ date: 2020-12-19 21:51:29</li>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_py title:A misc/icpc-anjr2020-p/A/0.py %}
+{% icodeweb blog lang:py icpc-anjr2020-p/A.py %}
 
 &lt;/details&gt;<h2>B - Best Grouping</h2>
 <h3>题意简述</h3>
@@ -71,7 +71,7 @@ date: 2020-12-19 21:51:29</li>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:B misc/icpc-anjr2020-p/B/0.cpp %}
+{% icodeweb blog lang:cpp icpc-anjr2020-p/B.cpp %}
 
 &lt;/details&gt;<h2>C - Computer Science Ability Test</h2>
 <h3>题意简述</h3>
