--- a/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(昆明) 热身赛.html
+++ b/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(昆明) 热身赛.html
@@ -119,7 +119,7 @@ Each of the $N$ following lines contains a single integer, the $i + 1$-th line c
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:B misc/icpc-akmr2020-p/B/0.cpp %}
+{% icodeweb blog lang:cpp icpc-akmr2020-p/B.cpp %}
 
 &lt;/details&gt;<h2>C - Statues</h2>
 <p>1000ms / 256 MB</p>
@@ -173,6 +173,6 @@ Each of the $N$ following lines contains a single integer, the $i + 1$-th line c
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:C misc/icpc-akmr2020-p/C/0.cpp %}
+{% icodeweb blog lang:cpp icpc-akmr2020-p/C.cpp %}
 
 &lt;/details&gt;
