--- a/tifa-233.com/题解 - 2020 ICPC 江西省大学生程序设计竞赛.html
+++ b/tifa-233.com/题解 - 2020 ICPC 江西省大学生程序设计竞赛.html
@@ -166,7 +166,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:A misc/icpc-cjxp2020/A/0.cpp %}
+{% icodeweb blog lang:cpp icpc-cjxp2020/A.cpp %}
 
 &lt;/details&gt;<h2>B - Apple</h2>
 <h3>解题思路</h3>
@@ -179,6 +179,8 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
+{% icodeweb blog lang:cpp icpc-cjxp2020/C.cpp %}
+
 &lt;/details&gt;<h2>D - Chinese Valentine's Day</h2>
 <h3>题意简述</h3>
 <h3>解题思路</h3>
@@ -186,6 +188,8 @@ $$</p>
 <h3>代码参考</h3>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
+
+{% icodeweb blog lang:cpp icpc-cjxp2020/D.cpp %}
 
 &lt;/details&gt;<h2>E - Color Sequence</h2>
 <h3>题意简述</h3>
@@ -203,7 +207,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:E misc/icpc-cjxp2020/E/0.cpp %}
+{% icodeweb blog lang:cpp icpc-cjxp2020/E.cpp %}
 
 &lt;/details&gt;<h2>F - Magical Number</h2>
 <h3>题意简述</h3>
@@ -250,7 +254,7 @@ $$
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:F misc/icpc-cjxp2020/F/0.cpp %}
+{% icodeweb blog lang:cpp icpc-cjxp2020/F.cpp %}
 
 &lt;/details&gt;<h2>G - Mathematical Practice</h2>
 <h3>题意简述</h3>
@@ -295,7 +299,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:H misc/icpc-cjxp2020/H/0.cpp %}
+{% icodeweb blog lang:cpp icpc-cjxp2020/H.cpp %}
 
 &lt;/details&gt;<h2>I - Simple Math Problem</h2>
 <h3>解题思路</h3>
@@ -324,7 +328,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:J misc/icpc-cjxp2020/J/0.cpp %}
+{% icodeweb blog lang:cpp icpc-cjxp2020/J.cpp %}
 
 &lt;/details&gt;<h2>K - Travel Expense</h2>
 <h3>题意简述</h3>
@@ -337,7 +341,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:K misc/icpc-cjxp2020/K/0.cpp %}
+{% icodeweb blog lang:cpp icpc-cjxp2020/K.cpp %}
 
 &lt;/details&gt;<h2>L - WZB's Harem</h2>
 <h3>题意简述</h3>
@@ -348,6 +352,8 @@ $$</p>
 <h3>代码参考</h3>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
+
+{% icodeweb blog lang:cpp icpc-cjxp2020/L.cpp %}
 
 &lt;/details&gt;<h2>M - Zoos's Animal Codes</h2>
 <h3>解题思路</h3>
