--- a/tifa-233.com/题解 - ICPC 西北区域省赛 2020.html
+++ b/tifa-233.com/题解 - ICPC 西北区域省赛 2020.html
@@ -316,14 +316,14 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:icpc-cnwp2020_C_0 misc/icpc-cnwp2020/C/0.cpp %}
+{% icodeweb blog lang:cpp icpc-cnwp2020/C0.cpp %}
 
 &lt;/details&gt;</li>
 <li><p>乱搞</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:icpc-cnwp2020_C_1 misc/icpc-cnwp2020/C/1.cpp %}
+{% icodeweb blog lang:cpp icpc-cnwp2020/C1.cpp %}
 
 &lt;/details&gt;</li>
 </ul>
@@ -362,6 +362,8 @@ $$</p>
 <h3>代码参考</h3>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
+
+{% icodeweb blog lang:cpp icpc-cnwp2020/D.cpp %}
 
 &lt;/details&gt;<h2>E - 御坂妹妹的芯片</h2>
 <h3>Description</h3>
@@ -452,7 +454,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:icpc-cnwp2020_F misc/icpc-cnwp2020/F/1.cpp %}
+{% icodeweb blog lang:cpp icpc-cnwp2020/F.cpp %}
 
 &lt;/details&gt;<h2>G - 常盘台中学</h2>
 <h3>Description</h3>
@@ -525,7 +527,13 @@ $$</p>
 <p>真·面向样例编程</p>
 </blockquote>
 <p>就是求三个数的 lcm, 搞不懂为啥开了 512MB 空间</p>
-<h2>I - 小 P 的烦恼</h2>
+<h3>代码参考</h3>
+&lt;details open&gt;
+&lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
+
+{% icodeweb blog lang:cpp icpc-cnwp2020/H.cpp %}
+
+&lt;/details&gt;<h2>I - 小 P 的烦恼</h2>
 <h3>Description</h3>
 <p>小 P 在 A 城的首都拥有一家商店. 最近在首都的犯罪活动有所增加, 因此小 P 正在考虑在其商店的仓库中建立更好的安全性</p>
 <p>仓库可以表示为具有 $n$ 行和 $m$ 列的矩阵. 矩阵的每个元素均为 <code>.</code>(一片空白区域)或 <code>x</code> (一堵墙)</p>
@@ -565,6 +573,8 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
+{% icodeweb blog lang:cpp icpc-cnwp2020/I.cpp %}
+
 &lt;/details&gt;<h2>J - 领地扩充</h2>
 <h3>Description</h3>
 <p>Eric 喜欢一款游戏, 游戏是在一个长方形的场地上玩. 在游戏过程中, Eric 可以扩充他的领地, 每一次(个)扩充都会将其中一个领地的大小扩大一定的倍数. 形式上, 有 $n$ 次(个)扩充, 其中第 $i$ 次(个)扩充将宽度或长度(由 Eric 选择)乘以 $a_i$​. 每从次(个)扩充不能使用一次以上, 扩充可以以任何顺序使用</p>
@@ -598,6 +608,8 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
+{% icodeweb blog lang:cpp icpc-cnwp2020/J.cpp %}
+
 &lt;/details&gt;<h2>K - Tate 的魔法</h2>
 <h3>Description</h3>
 <p>Tate 对魔法非常感兴趣, 他可以通过超自然力量的干预和解释了任何奇怪而怪异的现象. 但是谁能想到, 即使按固定的数字排列, Tate 也能看到美丽而神奇的东西. Tate 偶然拿到了一块纸, 上面写着一系列数字. 他立即发现这组数字不是随机的. 经过一系列研究的结果, Tate 得出了一个奇妙的属性, 这个神奇的数组应该具有这个性质: 如果这个数组中的最大值和最小值一样的, 则说明这组子数组是有魔力的. Tate 决定与你分享这个杰出的发现, 但他请求你的帮助. 所以你必须完成他的工作. 你所要做的就是数写在纸上的原始数字数组有多少个神奇的子数组. 子数组定义为连续元素的非空序列</p>
@@ -624,7 +636,13 @@ $$</p>
 <p>如对于样例 2, 可分为 ${-2,-2,-2},{0},{1}$,则 $l_1=3,l_2=1,l_3=1$</p>
 <h3>解题思路</h3>
 <p>$O(n)$ 直接求</p>
-<h2>L - 藤本树与树</h2>
+<h3>代码参考</h3>
+&lt;details open&gt;
+&lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
+
+{% icodeweb blog lang:cpp icpc-cnwp2020/K.cpp %}
+
+&lt;/details&gt;<h2>L - 藤本树与树</h2>
 <h3>Description</h3>
 <p>镰池和马和藤本树受够了学校无聊的时光, 于是他们决定玩一场游戏</p>
 <p>藤本树发现了一颗带有 $n$ 个结点且从结点 $1$ 到 $n$ 的树. 这棵树是无向无环图. 每个树的结点 $v$ 都有一个值 $a_v$. 每个结点的值都不相同并且值的范围在 $1$ 到 $n$</p>
@@ -679,6 +697,8 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
+{% icodeweb blog lang:cpp icpc-cnwp2020/L.cpp %}
+
 &lt;/details&gt;<h2>M - 作曲家</h2>
 <h3>Description</h3>
 <p>Jasmine 是一位作曲家, 最近她录制了两首非常受欢迎的歌曲. 现在她有很多粉丝在等着她的新歌. 这次 Jasmine 想为她的歌曲组成四个旋律. Jasmine 有一张纸, 上面写着 $n$ 个数. 她想取 $4$ 个这样的非空无交集的子序列使得它们都能组成旋律且长度之和是最大的</p>
@@ -709,6 +729,8 @@ $$</p>
 <h3>代码参考</h3>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
+
+{% icodeweb blog lang:cpp icpc-cnwp2020/M.cpp %}
 
 &lt;/details&gt;<div class="footnotes">
 <hr/>
