--- a/tifa-233.com/题解 - 兰州大学第一届『飞马杯』程序设计竞赛.html
+++ b/tifa-233.com/题解 - 兰州大学第一届『飞马杯』程序设计竞赛.html
@@ -120,17 +120,19 @@ date: 2021-10-24 20:15:45</li>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:A misc/lzu-fhc1/A/0.cpp %}
+{% icodeweb blog lzu-fhc1/A.cpp %}
 
 &lt;/details&gt;<h2>B - ★★ 体育课排队 ★★</h2>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
+{% icodeweb blog lzu-fhc1/B.cpp %}
+
 &lt;/details&gt;<h2>C - ★★ 生命的游戏 ★★</h2>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:C misc/lzu-fhc1/C/0.cpp %}
+{% icodeweb blog lzu-fhc1/C.cpp %}
 
 &lt;/details&gt;<h2>D - ★★ 飞马祝福语 ★★</h2>
 &lt;details open&gt;
@@ -142,32 +144,37 @@ date: 2021-10-24 20:15:45</li>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:E misc/lzu-fhc1/E/0.cpp %}
+{% icodeweb blog lzu-fhc1/E.cpp %}
 
-&lt;/details&gt;<h2>G - ★★ 糖果魔法阵 ★★</h2>
+&lt;/details&gt;<p>&lt;/details&gt;</p>
+<h2>G - ★★ 糖果魔法阵 ★★</h2>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:G misc/lzu-fhc1/G/0.cpp %}
+{% icodeweb blog lzu-fhc1/G.cpp %}
 
 &lt;/details&gt;<h2>I - ★★ 平形四边行 ★★</h2>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:I misc/lzu-fhc1/I/0.cpp %}
+{% icodeweb blog lzu-fhc1/I.cpp %}
 
 &lt;/details&gt;<h2>J - ★★ 翻滚吧硬币 ★★</h2>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:J misc/lzu-fhc1/J/0.cpp %}
+{% icodeweb blog lzu-fhc1/J.cpp %}
 
 &lt;/details&gt;<h2>K - ★★ 快乐苹果树 ★★</h2>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
+{% icodeweb blog lzu-fhc1/K.cpp %}
+
 &lt;/details&gt;<h2>L - ★★ 星星收集者 ★★</h2>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
+
+{% icodeweb blog lzu-fhc1/L.cpp %}
 
 &lt;/details&gt;
