--- a/tifa-233.com/题解 - 第十二届蓝桥杯大赛软件赛省赛 - C_C++大学A组.html
+++ b/tifa-233.com/题解 - 第十二届蓝桥杯大赛软件赛省赛 - C_C++大学A组.html
@@ -109,7 +109,7 @@ date: 2021-04-19 19:21:54</li>
 <p>{% pdf /archives/lq2021-p1/problems.pdf 600px %}</p>
 <h2>A - 卡片</h2>
 <h3>答案参考</h3>
-<p>{% icodeweb cpa_nohead title:Answer lang:php misc/lanqiao2021-p1-ca/A/0.php %}</p>
+<p>{% icodeweb blog lq2021-p1/A.php %}</p>
 <h2>B - 直线</h2>
 <h3>解题思路</h3>
 <p>扔<code>set</code>去重即可, 注意精度误差, 建议计算一般式而不是斜截式</p>
@@ -120,12 +120,12 @@ m+n+2\sum<em>{i=1}^{m-1}\sum</em>{j=1}^{n-1}<a href="(m-i">(i,j)=1</a>(n-j)-[2i\
 $$</p>
 <p>因为是提答题, 这式子就不化简了</p>
 <h3>答案参考</h3>
-<p>{% icodeweb cpa_nohead title:Answer lang:php misc/lanqiao2021-p1-ca/B/1.php %}</p>
+<p>{% icodeweb blog lq2021-p1/B.php %}</p>
 <h3>代码参考</h3>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:B misc/lanqiao2021-p1-ca/B/0.cpp %}
+{% icodeweb blog lang:cpp lq2021-p1/B.cpp %}
 
 &lt;/details&gt;<h2>C - 货物摆放</h2>
 <h3>解题思路</h3>
@@ -133,16 +133,16 @@ $$</p>
 <p>不过这个直接算也好算, 由整数的唯一分解定理并注意到只有 $3$ 是重复出现的质因子且只有 $3$ 个, 所以答案即为 $3^5(1+3+6)=2430$</p>
 <p>其中 $1$ 表示 $3$ 个 $3$ 均分在三个乘积里, $3$ 代表 $3$ 个 $3$ 放在同一个乘积里, $6$ 则是其他情况</p>
 <h3>答案参考</h3>
-<p>{% icodeweb cpa_nohead title:Answer lang:php misc/lanqiao2021-p1-ca/C/1.php %}</p>
+<p>{% icodeweb blog lq2021-p1/C.php %}</p>
 <h3>代码参考</h3>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:C misc/lanqiao2021-p1-ca/C/0.cpp %}
+{% icodeweb blog lang:cpp lq2021-p1/C.cpp %}
 
 &lt;/details&gt;<h2>D - 路径</h2>
 <h3>答案参考</h3>
-<p>{% icodeweb cpa_nohead title:Answer lang:php misc/lanqiao2021-p1-ca/D/0.php %}</p>
+<p>{% icodeweb blog lq2021-p1/D.php %}</p>
 <h2>E - 回路计数</h2>
 <h3>解题思路</h3>
 <p>设图为 $G=\lang V,E\rang$</p>
@@ -161,12 +161,12 @@ $$</p>
 </li>
 </ul>
 <h3>答案参考</h3>
-<p>{% icodeweb cpa_nohead title:Answer lang:php misc/lanqiao2021-p1-ca/E/1.php %}</p>
+<p>{% icodeweb blog lq2021-p1/E.php %}</p>
 <h3>代码参考</h3>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:E misc/lanqiao2021-p1-ca/E/0.cpp %}
+{% icodeweb blog lang:cpp lq2021-p1/E.cpp %}
 
 &lt;/details&gt;<h2>F - 砝码称重</h2>
 <h3>解题思路</h3>
@@ -175,7 +175,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:F misc/lanqiao2021-p1-ca/F/0.cpp %}
+{% icodeweb blog lang:cpp lq2021-p1/F.cpp %}
 
 &lt;/details&gt;<h2>G - 异或数列</h2>
 <h3>解题思路</h3>
@@ -198,7 +198,7 @@ $$</p>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:G misc/lanqiao2021-p1-ca/G/0.cpp %}
+{% icodeweb blog lang:cpp lq2021-p1/G.cpp %}
 
 &lt;/details&gt;<h2>H - 左孩子右兄弟</h2>
 <h3>解题思路</h3>
