--- a/zsqk.github.io/GitHub 投票设计.html
+++ b/zsqk.github.io/GitHub 投票设计.html
@@ -3,8 +3,15 @@
 <p>title: GitHub 投票设计</p>
 <h2>categories: [GitHub, design]</h2>
 <h2>GitHub 投票</h2>
-<p>GitHub 的投票功能位于 Discussions 中, 有一个分为叫作 Polls.</p>
+<p>GitHub 的投票功能位于 Discussions 中, 有一个分类叫作 Polls.</p>
 <p>Polls 有基础的投票功能, 但不是表单那种复杂设计.</p>
+<p>如果想要自定义分类也可以, 只需要将分类的 Discussion Format 设置为 Poll 即可.
+但有两个限制:</p>
+<ol>
+<li>已经设置为 Poll 的分类不能修改.</li>
+<li>其他分类不能改为 Poll 分类.</li>
+</ol>
+<p>所以基本只能在创建分类的时候就选好 Poll 格式.</p>
 <h2>GitHub 的投票相比钉钉/飞书群投票功能区别</h2>
 <ol>
 <li>GitHub 仅支持不投票即可查看结果功能.</li>
