--- a/conge.livingwithfcs.org/折返点 2135｜冬季跑步怎么穿？.html
+++ b/conge.livingwithfcs.org/折返点 2135｜冬季跑步怎么穿？.html
@@ -38,17 +38,19 @@ tags: 跑步 跑步问答</p>
 <blockquote><p>其实这个问题的回答，有许多需要考虑的方面。比如，你的冬季会有多冷，你自己对温度的敏感程度，你的体质，你的跑步习惯（距离，速度，时间），你跑步的时间（晨跑，夜跑，午间跑），你爱不爱出汗，你对舒服的定义，甚至你的审美。</p>
 <p>对于我来说，我跑步穿衣服就是为了舒服，我对舒服的定义是，衣服不因为出汗沾在身上。冬天因为气温低，其实跑步时出汗相对少，多数时候，还是挺舒服的。但是如果特别累，就得主义保温了，如果有风，还得注意防风。</p>
 <p>下面是我的跑步穿衣指导原则，是自己总结的适合自己的。你可以参考。</p>
-<p>1，15度以上， 可以打赤膊，穿短裤。带上帽子挡汗。赤脚。<br/>
-2，10度到15度之间，可以穿短袖运动T和短裤。赤脚。<br/>
-3，10度以下，5度以上，可以穿长袖运动T-shirt，轻薄型的，可以穿短裤或者长裤，都可以。赤脚。<br/>
-4，5度以下，0度以上，穿长袖运动T，厚一点的，穿长裤。赤脚。<br/>
-5，零下10度到0度之间，在4的基础上，加一件上衣挡寒。最好穿鞋。<br/>
-6，零下10度以下，下身加保暖层。如果有风，加防风层。</p>
-<p>上面提到的衣服，其实可以分为排汗，保温和防风三种。这也是国际上流行的“洋葱行”穿衣法。</p>
+<p>1，15度以上， 可以打赤膊，穿短裤。带上帽子挡汗。 
+2，10度到15度之间，可以穿短袖运动T和短裤。<br/>
+3，10度以下，5度以上，可以穿长袖运动T-shirt，轻薄型的，可以穿短裤或者长裤，都可以。<br/>
+4，5度以下，0度以上，穿长袖运动T，厚一点的，穿长裤。 
+5，零下5度到0度之间，在4的基础上，加一件上衣挡寒。<br/>
+6，零下5到零下10度，下身加保暖层。如果有风，加防风层。<br/>
+7，零下10度以下，防风，保暖，排汗三层。手套，帽子，面罩，防风镜……（其实我没在这个温度下跑过……）
+上面提到的衣服，其实可以分为排汗，保温和防风三种。这也是国际上流行的“洋葱行”穿衣法。</p>
 <p>排汗层就是贴身的那层运动衣。夏季是短裤短袖T恤。秋天的时候可以根据需要变成长袖长裤。<br/>
 我的运动T恤都是排汗型的。上身做保暖层的，可以是厚一点的卫衣。防风层就用冲锋衣。有这三层，上身保暖一半都能应付。若还不行，可以考虑用轻薄的羽绒服。<br/>
 下身呢，我的跑步裤子是紧身的，你也可以用压缩裤做排汗层。冬天的时候，如果冷，可以在外面加一层宽松的运动裤，做保暖层。如果有风，可以用与冲锋衣相同材质的长裤。</p>
-<p>帽子手套也要酌情戴上。</p>
+<p>我自己有时候赤脚跑步，但一半在气温0度以下的时候，就会穿鞋了。</p>
+<p>在零度以上的时候，帽子手套也要酌情戴上。</p>
 </blockquote>
 <h2>3. <a href="https://douc.cc/00Xxnq">一侧髋关节附近酸痛，还能继续跑吗？</a></h2>
 <blockquote><p>跑量不大，一周3-5次，每次5km</p>
