--- a/conge.livingwithfcs.org/折返点 2436 - 一周做了两次比赛义工.html
+++ b/conge.livingwithfcs.org/折返点 2436 - 一周做了两次比赛义工.html
@@ -77,7 +77,7 @@ auth: conge</p>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="2024_week36.png" src="https://s2.loli.net/2024/10/17/ovl8OXJxH4Fm6Eb.png"/></td>
 </tr>
 </tbody>
 </table>
@@ -91,30 +91,31 @@ auth: conge</p>
 <tbody>
 <tr>
 <td style="text-align:left">20240902</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240902.webp" src="https://s2.loli.net/2024/10/17/RUyiEHXeZGa3kAg.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240903</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240903.webp" src="https://s2.loli.net/2024/10/17/V3zRB2wS7lPTFDe.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240904</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240904.webp" src="https://s2.loli.net/2024/10/17/GZEBMAD4LlVJ6mX.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240905</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240905.webp" src="https://s2.loli.net/2024/10/17/WNyF5gaXA1hmZCP.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240906</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240906.webp" src="https://s2.loli.net/2024/10/17/xwnHEIFzQ6T3U4l.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240907</td>
-<td style="text-align:center"></td>
+<td style="text-align:center"><img alt="20240907.webp" src="https://s2.loli.net/2024/10/17/Grs9QaxpRIoCnwF.webp"/></td>
 </tr>
 <tr>
 <td style="text-align:left">20240908</td>
+<td style="text-align:center"><img alt="20240908.webp" src="https://s2.loli.net/2024/10/17/Z5CPsSNVED4aKGe.webp"/></td>
 </tr>
 </tbody>
 </table>
@@ -125,4 +126,5 @@ auth: conge</p>
 <li><a href="https://www.strava.com/athletes/57680242">我的 Strava 页面</a></li>
 </ul>
 <pre><code>2024-09-14 发布
+2024-10-16 补图
 </code></pre>
