--- a/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
+++ b/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
@@ -17,6 +17,11 @@ tags: [devops]</p>
 </ul>
 <p>The build context is the set of files and directories that are accessible to the Docker engine when building an image. When you run a <code>docker build</code> command, Docker sends the content of the specified context directory (and its subdirectories) to the Docker daemon. This context forms the scope within which the <code>COPY</code> and <code>ADD</code> instructions operate.</p>
 <p>Docker-compose is a tool that accepts a YAML file that specifies a cross container application and automates the creation and removal of all those containers without the need to write several docker commands for each one.</p>
+<blockquote><ol>
+<li>An image is a logical grouping of layers plus metadata about what to do when creating a container and how to assemble the layers. Part of that metadata is that each layer knows its parent's ID. When you docker run an image, docker creates a container: it unpacks all the layers in the correct order, creating a new "root" file system separate from the host.</li>
+<li>A layer is a change on an image, or an intermediate image. Every command you specify (FROM, RUN, COPY, etc.) in your Dockerfile causes the previous image to change, thus creating a new layer. If you make a change to your Dockerfile, docker will rebuild only the layer that was changed and the ones after that. This is called layer caching.</li>
+</ol>
+</blockquote>
 <h2>A Dockerfile for a NodeJS application</h2>
 <p>This is a valid Dockerfile for a NodeJS application. But we can improve it a lot.</p>
 <pre><code class="lang-dockerfile">FROM node
@@ -139,8 +144,13 @@ Dockerfile
 .dockerignore
 .git
 </code></pre>
-<blockquote><p>Kaniko is a tool that enables building container images from a Dockerfile inside a Kubernetes cluster without requiring a Docker daemon. Kaniko builds container images by parsing the Dockerfile and executing each command within a container isolated from the host environment. Instead of using a Docker daemon, Kaniko simulates the Docker builder by providing its own implementations of Docker commands like ADD, COPY, RUN, etc.</p>
-</blockquote>
+<p><strong>Kaniko</strong> is a tool that enables building container images from a Dockerfile inside a Kubernetes cluster (runs in a containerized environment like a CI/CD pipeline) without requiring a Docker daemon. Kaniko builds container images by parsing the Dockerfile and executing each command within a container isolated from the host environment. Instead of using a Docker daemon, Kaniko simulates the Docker builder by providing its own implementations of Docker commands like ADD, COPY, RUN, etc.</p>
+<ol>
+<li>You gather all your blocks (your source code) and decide how to arrange them using instructions (your Dockerfile). You tell a magical builder (Kaniko) how to build your toy house using these instructions, without needing the usual building tools (Docker).</li>
+<li>This packed version (a Docker image) can be sent to a special storage box (the container registry) so anyone can use it later. You told the builder (Kaniko) in step 1 where to store the house once it's packed.</li>
+<li>Now, you have to make sure that when the kids want to play with your house in the playground (your servers or Kubernetes), they are using the right version. So, you update the playground instructions (Terraform configuration) with the newest version of your house.</li>
+<li>The playground helpers (Terraform) read the updated plan you prepared. Terraform will actually deploy it, which means they replace the old toy house with the new one.</li>
+</ol>
 <h2>Intro to Kubernetes</h2>
 <p>Let's say you have an app which you have containerized (Monoliths were broken into microservices). So you run a bunch of containers to serve your app to users. But how do you manage these different containers? This is where K8s comes to the rescue. Kubernetes is a container orchestration tool for managing production-ready containerized workloads and services that allows for declarative setup as well as automation.</p>
 <ul>
