--- a/kexizeroing.github.io/A guide to Prompt Engineering.html
+++ b/kexizeroing.github.io/A guide to Prompt Engineering.html
@@ -346,6 +346,8 @@ openai api fine_tunes.get -i &lt;YOUR_FINE_TUNE_JOB_ID&gt;
 # Use a fine-tuned model
 openai api completions.create -m &lt;FINE_TUNED_MODEL&gt; -p &lt;YOUR_PROMPT&gt;
 </code></pre>
+<blockquote><p>CSV stands for comma separated values. It is not a file type but a universally accepted format. It refers to the way the data is structured. This enables programs - like Excel, Numbers, cloud apps and databases - to read your data in an organized way. If you're working on data in tabular form, like a spreadsheet, you may wish to save as CSV.</p>
+</blockquote>
 <h2>References</h2>
 <ul>
 <li><a href="https://www.promptingguide.ai">https://www.promptingguide.ai</a></li>
