--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Sep 9 2024"</h2>
+<h2>updatedDate: "Oct 27 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -246,26 +246,6 @@ function reverseList(head) {
   }
 
   return prev;
-}
-
-// fast pointer moves forward `n` steps first,
-// then fast and slow pointers move forward together
-// until the fast pointer reaches the end of the linked list.
-function removeNthFromEnd(head, n) {
-  let dummy = new ListNode(0, head);
-  let fast = dummy;
-  let slow = dummy;
-
-  while (n--) {
-    fast = fast.next;
-  }
-  while (fast.next) {
-    slow = slow.next;
-    fast = fast.next;
-  }
-
-  slow.next = slow.next.next;
-  return dummy.next;
 }
 </code></pre>
 <h3>Stacks</h3>
@@ -1833,6 +1813,21 @@ function reverse(nums, start, end) {
 
   return root;
 };
+
+// LCA of a binary tree (not BST)
+var lowestCommonAncestor = function(root, p, q) {
+  if (!root || root === p || root === q) return root;
+
+  let left = lowestCommonAncestor(root.left, p, q);
+  let right = lowestCommonAncestor(root.right, p, q);
+
+  // p and q are in the right subtree
+  if (!left) return right;
+  // p and q are in the left subtree
+  if (!right) return left;
+  // p and q at different side
+  return root;
+};
 </code></pre>
 <p>Given the root of a binary tree, invert the tree, and return its root.</p>
 <pre><code class="lang-js">var invertTree = function(root) {
@@ -1856,6 +1851,59 @@ function reverse(nums, start, end) {
 
   return hasPathSum(root.left, targetSum - root.val) || hasPathSum(root.right, targetSum - root.val);
 };
+</code></pre>
+<p>Given the root of a binary tree, return the maximum path sum of any non-empty path. A path can start and end at any nodes in the tree.</p>
+<pre><code class="lang-js">var maxPathSum = function(root) {
+  let max = -Infinity;
+
+    function findSums(node) {
+        if (!node) return 0;
+
+        let left = findSums(node.left),
+            right = findSums(node.right),
+            allSum = left + right + node.val,
+        leftNodeSum = left + node.val,
+        rightNodeSum = right + node.val;
+
+        // Tracks all possible paths, include both left and right children
+        max = Math.max(max, node.val, allSum, leftNodeSum, rightNodeSum);
+
+        // Return value can only use ONE child. This is what we "offer up" to parent nodes
+        return Math.max(leftNodeSum, rightNodeSum, node.val);
+    };
+
+    findSums(root);
+    return max;
+};
+</code></pre>
+<p>Given the roots of two binary trees root and subRoot, return true if there is a subtree of root with the same structure and node values of subRoot and false otherwise.</p>
+<pre><code class="lang-js">var isSubtree = function(root, subRoot) {
+  if (subRoot === null) return true;
+  if (root === null) return false;
+
+    if (isSameTree(root, subRoot)) {
+        return true;
+    }
+  // if not same, continue to check subtrees
+    return (isSubtree(root.left, subRoot) || isSubtree(root.right, subRoot));
+};
+
+function isSameTree(root, subRoot) {
+  // can't access `root.val` when its null
+    if (root === null &amp;&amp; subRoot === null) {
+      return true;
+    }
+
+  if ((root &amp;&amp; subRoot === null) || (root === null &amp;&amp; subRoot)) {
+      return false;
+    } 
+
+    if (root.val !== subRoot.val) {
+        return false;
+    }
+
+    return (isSameTree(root.left, subRoot.left) &amp;&amp; isSameTree(root.right, subRoot.right));
+}
 </code></pre>
 <p>Given the root of a binary tree, determine if it is a valid binary search tree.</p>
 <pre><code class="lang-js">var isValidBST = function(root) {
@@ -1937,6 +1985,61 @@ function reverse(nums, start, end) {
     }
   }
   return result;
+};
+</code></pre>
+<p>Given the head of a linked list, remove the nth node from the end of the list and return its head.</p>
+<pre><code class="lang-js">// fast pointer moves forward `n` steps first,
+// then fast and slow pointers move forward together,
+// until the fast pointer reaches the end of the linked list.
+var removeNthFromEnd = function(head, n) {
+  let dummy = new ListNode(0, head);
+  let fast = dummy;
+  let slow = dummy;
+
+  for (let i = 0; i &lt; n; i++) {
+    fast = fast.next;
+  }
+  while (fast.next) {
+    slow = slow.next;
+    fast = fast.next;
+  }
+  slow.next = slow.next.next;
+
+  return dummy.next;
+};
+</code></pre>
+<p>Given a linked list, swap every two adjacent nodes and return its head.</p>
+<pre><code class="lang-js">var swapPairs = function(head) {
+  if (head == null || head.next == null) {
+    return head;
+  }
+  const nextHead = head.next;
+  const skipHead = head.next.next;
+
+  nextHead.next = head;
+  head.next = swapPairs(skipHead);
+
+  return nextHead;
+};
+</code></pre>
+<p>You are given the heads of two sorted linked lists. Merge the two lists into one sorted list.</p>
+<pre><code class="lang-js">var mergeTwoLists = function(list1, list2) {
+  let dummy = new ListNode();
+  let cur = dummy;
+
+  while (list1 &amp;&amp; list2) {
+    if (list1.val &gt; list2.val) {
+      cur.next = list2;
+      list2 = list2.next;
+    } else {
+      cur.next = list1;
+      list1 = list1.next;
+    }
+    cur = cur.next;
+  }
+
+  cur.next = list1 || list2;
+  return dummy.next;
 };
 </code></pre>
 <p>Given a 2d grid map of '1's (land) and '0's (water), count the number of islands. An island is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges are all surrounded by water.</p>
@@ -2068,6 +2171,48 @@ function dfs(board, word, i, j, k, visited) {
   return 0;    
 };
 </code></pre>
+<p>There are a total of <code>numCourses</code> courses you have to take, labeled from <code>0</code> to <code>numCourses - 1</code>. You are given an array prerequisites where <code>prerequisites[i] = [ai, bi]</code> indicates that you must take course <code>bi</code> first if you want to take course <code>ai</code>. Return true if you can finish all courses.</p>
+<pre><code class="lang-js">// Topological Sort
+var canFinish = function(numCourses, prerequisites) {
+  if (numCourses &lt;= 0) {
+    return true;
+  }
+
+  let inDegree = new Array(numCourses).fill(0);
+  let graph = Array.from({ length: numCourses }, () =&gt; []);
+
+  prerequisites.forEach(edge =&gt; {
+    let parent = edge[1];
+    let child = edge[0];
+    graph[parent].push(child);
+    inDegree[child]++;
+  });
+
+  // Initialize the queue with courses having no prerequisites (inDegree = 0)
+  let queue = [];
+  for (let i = 0; i &lt; numCourses; i++) {
+    if (inDegree[i] === 0) {
+      queue.push(i);
+    }
+  }
+
+  // Process nodes with no prerequisites
+  let counter = 0;
+  while (queue.length &gt; 0) {
+    let course = queue.shift();
+    counter++;
+
+    graph[course].forEach(child =&gt; {
+      inDegree[child]--;
+      if (inDegree[child] === 0) {
+        queue.push(child);
+      }
+    });
+  }
+
+  return counter === numCourses;
+};
+</code></pre>
 <p>The message is decoded via the following mapping: <code>"1" -&gt; 'A'</code> ... <code>"26" -&gt; 'Z'</code>. There are many different ways you can decode the message because some codes are contained in other codes ("2" and "5" vs "25"). Given a string s containing only digits, return the number of ways to decode it.</p>
 <pre><code class="lang-js">var numDecodings = function (s) {
   let dp = Array(s.length + 1).fill(0);
@@ -2194,36 +2339,5 @@ var maxProfit = function(prices) {
   }
 
   return Math.max(dp[prices.length - 1][1], dp[prices.length - 1][2], dp[prices.length - 1][3]);
-};
-</code></pre>
-<p>You are given k identical eggs and you have access to a building with n floors labeled from 1 to n. There exists a floor f such that any egg dropped at a floor higher than f will break, and any egg dropped at or below floor f will not break.</p>
-<pre><code class="lang-js">var superEggDrop = function(k, n) {
-  // dp[i][j] represents the minimum # of attempts needed with i eggs and j floors
-  let dp = Array.from({ length: k + 1 }, () =&gt; Array.from({ length: n + 1 }, (_, i) =&gt; i));
-  dp[0] = Array(n + 1).fill(0);
-
-  for (let egg = 2; egg &lt;= k; egg++) {
-    for (let flr = 2; flr &lt;= n; flr++) {
-      let low = 1, high = flr;
-      let result = flr; // the worst-case need to try
-
-      while (low &lt; high) {
-        let mid = Math.floor((low + high) / 2);
-        // the # of attempts needed in worst-case
-        let left = dp[egg - 1][mid - 1]; // egg breaks
-        let right = dp[egg][flr - mid];  // egg doesn't break
-
-        result = Math.min(result, 1 + Math.max(left, right));
-
-        // We're trying to minimize `Math.max(left, right)`
-        if (left === right) break;
-        else if (left &lt; right) low = mid + 1;
-        else high = mid - 1;
-      }
-
-      dp[egg][flr] = result;
-    }
-  }
-  return dp[k][n];
 };
 </code></pre>
