--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -6,7 +6,7 @@ slug: get-started-with-langchain
 description: ""
 added: "Apr 9 2023"
 tags: [AI]</p>
-<h2>updatedDate: "July 29 2024"</h2>
+<h2>updatedDate: "Oct 17 2024"</h2>
 <p>LangChain is a framework for developing applications powered by language models, making them easier to integrate into applications. LangChain makes it easy to prototype LLM applications and Agents.</p>
 <ul>
 <li>JS/TS Docs: <a href="https://js.langchain.com/docs">https://js.langchain.com/docs</a></li>
@@ -399,3 +399,10 @@ while (true) {
 </ul>
 </li>
 </ol>
+<p>You can run any GGUF <em>(a binary format that is optimized for quick loading and saving of models)</em> on the Hugging Face Hub directly with ollama. All you need to do is:</p>
+<pre><code class="lang-sh"># https://huggingface.co/docs/hub/en/ollama
+ollama run hf.co/{username}/{repository}
+
+# run the Llama 3.2 1B
+ollama run hf.co/bartowski/Llama-3.2-1B-Instruct-GGUF:latest
+</code></pre>
