--- a/kexizeroing.github.io/Unlock the power of Generative UI.html
+++ b/kexizeroing.github.io/Unlock the power of Generative UI.html
@@ -6,7 +6,7 @@ slug: unlock-the-power-of-generative-ui
 description: ""
 added: "Apr 16 2024"
 tags: [AI, react]</p>
-<h2>updatedDate: "Jun 14 2024"</h2>
+<h2>updatedDate: "Oct 30 2024"</h2>
 <p>The Vercel AI SDK is an open-source library designed to help developers build conversational streaming user interfaces. With the release of the <a href="https://vercel.com/blog/ai-sdk-3-generative-ui">AI SDK 3.0</a>, developers can move beyond plaintext and markdown chatbots to give LLMs rich, component-based interfaces.</p>
 <ol>
 <li>With the introduction of <a href="https://platform.openai.com/docs/guides/function-calling">Function Calling</a>, you have been able to build applications that are able to fetch realtime data.</li>
@@ -207,6 +207,94 @@ export default function Home() {
 }
 </code></pre>
 <p>There is a <a href="https://www.youtube.com/watch?v=UDm-hvwpzBI">13 minute video</a> on how to build LLM applications through the new Vercel AI SDK.</p>
+<h3>More <code>tools</code> examples</h3>
+<pre><code class="lang-js">// https://github.com/browserbase/BrowseGPT
+tools: {
+  googleSearch: tool({
+    description: 'Search Google for a query',
+    parameters: z.object({
+      toolName: z.string().describe('What the tool is doing'),
+      query: z.string().describe('The exact and complete search query as provided by the user. Do not modify this in any way.'),
+      sessionId: z.string().describe('The session ID to use for the search. If there is no session ID, create a new session with createSession Tool.'),
+      debuggerFullscreenUrl: z.string().describe('The fullscreen debug URL to use for the search. If there is no debug URL, create a new session with createSession Tool.')
+    }),
+    execute: async ({ query, sessionId }) =&gt; {
+      // import { chromium } from 'playwright'
+      const browser = await chromium.connectOverCDP(
+        `wss://connect.browserbase.com?apiKey=${process.env.BROWSERBASE_API_KEY}&amp;sessionId=${sessionId}`
+      );
+      const defaultContext = browser.contexts()[0];
+      const page = defaultContext.pages()[0];
+
+      await page.goto(`https://www.google.com/search?q=${encodeURIComponent(query)}`);
+      await page.waitForTimeout(500);
+      await page.keyboard.press('Enter');
+      await page.waitForLoadState('load', { timeout: 10000 });
+
+      await page.waitForSelector('.g');
+
+      const results = await page.evaluate(() =&gt; {
+        const items = document.querySelectorAll('.g');
+        return Array.from(items).map(item =&gt; {
+          const title = item.querySelector('h3')?.textContent || '';
+          const description = item.querySelector('.VwiC3b')?.textContent || '';
+          return { title, description };
+        });
+      });
+
+      const text = results.map(item =&gt; `${item.title}\n${item.description}`).join('\n\n');
+
+      const response = await generateText({
+        model: anthropic('claude-3-5-sonnet-20240620'),
+        prompt: `Evaluate the following web page content: ${text}`,
+      });
+
+      return {
+        toolName: 'Searching Google',
+        content: response.text,
+        dataCollected: true,
+      };
+    },
+  }),
+  getPageContent: tool({
+    description: 'Get the content of a page using Playwright',
+    parameters: z.object({
+      toolName: z.string().describe('What the tool is doing'),
+      url: z.string().describe('The url to get the content of'),
+      sessionId: z.string().describe('The session ID to use for the search. If there is no session ID, create a new session with createSession Tool.'),
+      debuggerFullscreenUrl: z.string().describe('The fullscreen debug URL to use for the search. If there is no debug URL, create a new session with createSession Tool.')
+    }),
+    execute: async ({ url, sessionId }) =&gt; {
+      const browser = await chromium.connectOverCDP(
+        `wss://connect.browserbase.com?apiKey=${process.env.BROWSERBASE_API_KEY}&amp;sessionId=${sessionId}`
+      );
+      const defaultContext = browser.contexts()[0];
+      const page = defaultContext.pages()[0];
+
+      await page.goto(url);
+
+      const content = await page.content();
+      const dom = new JSDOM(content);
+      const reader = new Readability(dom.window.document);
+      const article = reader.parse();
+
+      const text = `${article?.title || ''}\n${article?.textContent || ''}`;
+
+      const response = await generateText({
+        model: anthropic('claude-3-5-sonnet-20240620'),
+        prompt: `Evaluate the following web page content: ${text}`,
+      });
+
+      return {
+        toolName: 'Getting page content',
+        content: response.text,
+      };
+    },
+  }),
+},
+</code></pre>
+<blockquote><p><code>Readability.js</code> from Mozilla is a standalone version of the readability library used for Firefox Reader View. To parse a document, you must create a new <code>Readability</code> object from a DOM document object, and then call <code>parse()</code>. This returned <code>article</code> object will contain: title, content, textContent, length, excerpt, etc.</p>
+</blockquote>
 <h3>More to explore</h3>
 <ul>
 <li><a href="https://chat.vercel.ai/">https://chat.vercel.ai/</a></li>
