--- a/tifa-233.com/题解 - [第六届团体程序设计天梯赛 L3-3] 可怜的简单题.html
+++ b/tifa-233.com/题解 - [第六届团体程序设计天梯赛 L3-3] 可怜的简单题.html
@@ -36,6 +36,6 @@ date: 2021-04-26 20:46:03</li>
 &lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;
 
-{% icodeweb cpa_cpp title:gplt2021_l3-3 misc/gplt2021/l3-3/0.cpp %}
+{% icodeweb blog lang:cpp gplt2021-l3-3/main.cpp %}
 
 &lt;/details&gt;
